Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I304656c879dc3a67fe91738853e463159680bead

--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -1987,7 +1987,7 @@
     <string name="accessibility_settings_title" msgid="6739115703615065716">"Ρυθμίσεις προσβασιμότητας"</string>
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"Προβολή, αλληλεπίδραση, ήχος"</string>
     <string name="vision_settings_title" msgid="8919983801864103069">"Ρυθμίσεις όρασης"</string>
-    <string name="vision_settings_description" msgid="7614894785054441991">"Μπορείτε να προσαρμόσετε αυτήν τη συσκευή σύμφωνα με τις ανάγκες σας. Οι λειτουργίες προσβασιμότητας μπορούν να τροποποιηθούν αργότερα από τις ρυθμίσεις."</string>
+    <string name="vision_settings_description" msgid="7614894785054441991">"Μπορείτε να προσαρμόσετε αυτή τη συσκευή σύμφωνα με τις ανάγκες σας. Οι λειτουργίες προσβασιμότητας μπορούν να τροποποιηθούν αργότερα από τις ρυθμίσεις."</string>
     <string name="vision_settings_suggestion_title" msgid="4689275412658803919">"Αλλαγή μεγέθους γραμματοσειράς"</string>
     <string name="screen_reader_category_title" msgid="5825700839731107803">"Αναγνώστης οθόνης"</string>
     <string name="keyboard_category_title" msgid="6841712758039893220">"Επιλογές φυσικού πληκτρολογίου"</string>
@@ -3176,7 +3176,7 @@
     <string name="keywords_active_unlock_settings" msgid="4511320720304388889">"ξεκλείδωμα ρολογιού, προσθήκη ξεκλειδώματος ρολογιού"</string>
     <string name="keywords_display_auto_brightness" msgid="7162942396941827998">"μείωση φωτεινότητας οθόνης, οθόνη αφής, μπαταρία, έξυπνη φωτεινότητα, δυναμική φωτεινότητα, αυτόματη φωτεινότητα"</string>
     <string name="keywords_display_adaptive_sleep" msgid="4905300860114643966">"έξυπνη, μείωση φωτεινότητας οθόνης, αδράνεια, μπαταρία, χρονικό όριο, προσοχή, προβολή, οθόνη, αδράνεια"</string>
-    <string name="keywords_auto_rotate" msgid="7288697525101837071">"κάμερα, έξυπνη, αυτόματη περιστροφή, αυτόματη περιστροφή, περιστροφή, αναστροφή, περιστροφή, πορτραίτο, οριζόντιος, προσανατολισμός, κατακόρυφος, οριζόντιος"</string>
+    <string name="keywords_auto_rotate" msgid="7288697525101837071">"κάμερα, έξυπνη, αυτόματη περιστροφή, αυτόματη περιστροφή, περιστροφή, αναστροφή, περιστροφή, πορτρέτο, οριζόντιος, προσανατολισμός, κατακόρυφος, οριζόντιος"</string>
     <string name="keywords_system_update_settings" msgid="5769003488814164931">"αναβάθμιση, android"</string>
     <string name="keywords_zen_mode_settings" msgid="7810203406522669584">"dnd, πρόγραμμα, ειδοποιήσεις, αποκλεισμός, σίγαση, δόνηση, αδράνεια, εργασία, εστίαση, ήχος, σίγαση, ημέρα, καθημερινή, σαββατοκύριακο, νύχτα καθημερινής, συμβάν"</string>
     <string name="keywords_screen_timeout" msgid="8921857020437540572">"οθόνη, χρόνος κλειδώματος, λήξη ορίου χρόνου, οθόνη κλειδώματος"</string>
@@ -5011,7 +5011,7 @@
     <string name="disable_phantom_process_monitor_title" msgid="8348108346706188771">"Απενεργοπ. περιορισμών σε θυγατρικές διεργασίες"</string>
     <string name="disable_phantom_process_monitor_summary" msgid="3044464635550256985">"Απενεργοποιήστε τους περιορισμούς στη χρήση πόρων συστήματος για τις θυγατρικές διεργασίες της εφαρμογής"</string>
     <string name="enable_notes_role_title" msgid="7662702013496114763">"Επιβολή ενεργοποίησης ρόλου Σημειώσεις"</string>
-    <string name="enable_notes_role_summary" msgid="5495721409392395089">"Ενεργοποιήστε τις ενσωματώσεις συστήματος για τη δημιουργία σημειώσεων μέσω του ρόλου Σημειώσεις. Εάν ο ρόλος Σημειώσεις είναι ήδη ενεργοποιημένος, δεν πραγματοποιείται καμία ενέργεια. Επαιτεί επανεκκίνηση."</string>
+    <string name="enable_notes_role_summary" msgid="5495721409392395089">"Ενεργοποιήστε τις ενσωματώσεις συστήματος για τη δημιουργία σημειώσεων μέσω του ρόλου Σημειώσεις. Εάν ο ρόλος Σημειώσεις είναι ήδη ενεργοποιημένος, δεν πραγματοποιείται καμία ενέργεια. Απαιτεί επανεκκίνηση."</string>
     <string name="bluetooth_broadcast_dialog_title" msgid="9172775308463135884">"Μετάδοση"</string>
     <string name="bluetooth_broadcast_dialog_broadcast_app" msgid="1016617579194329005">"Μετάδοση με την εφαρμογή <xliff:g id="CURRENTAPP">%1$s</xliff:g>"</string>
     <string name="bluetooth_broadcast_dialog_find_message" msgid="6621660851669953883">"Ακούστε μεταδόσεις που πραγματοποιούνται κοντά σας"</string>
