--- a/res/values-fr-rCA/strings.xml
+++ b/res/values-fr-rCA/strings.xml
@@ -1441,7 +1441,7 @@
     <string name="apn_mnc" msgid="1926382406843447854">"MNC"</string>
     <string name="apn_auth_type" msgid="4234397513494356932">"Type d\'authentification"</string>
     <string name="apn_type" msgid="1835573305077788773">"Type d\'APN"</string>
-    <string name="apn_protocol" msgid="181529867160380010">"Protocole de l\'APN"</string>
+    <string name="apn_protocol" msgid="181529867160380010">"Protocole APN"</string>
     <string name="apn_roaming_protocol" msgid="1645131094105362513">"Protocole APN en itinérance"</string>
     <string name="carrier_enabled" msgid="664074151573150130">"Activer/Désactiver l\'APN"</string>
     <string name="carrier_enabled_summaryOn" msgid="5212067975273903381">"APN activé"</string>
@@ -4630,7 +4630,7 @@
     <string name="primary_sim_title" msgid="2508161011657571566">"Vos cartes SIM principales"</string>
     <string name="primary_sim_calls_title" msgid="4961189133582615685">"Appels"</string>
     <string name="primary_sim_texts_title" msgid="1287584042733097749">"Messages texte"</string>
-    <string name="primary_sim_automatic_data_title" msgid="1265528923229642480">"Commutation auto. de données"</string>
+    <string name="primary_sim_automatic_data_title" msgid="1265528923229642480">"Commutation automatique des données"</string>
     <string name="primary_sim_automatic_data_msg" msgid="1612203837010785203">"Utiliser les données de l\'une ou l\'autre carte SIM en fonction de la couverture et de la disponibilité"</string>
     <string name="sim_onboarding_phoneNumber_data_only" msgid="8158409121949373662">"Données uniquement"</string>
     <string name="sim_onboarding_setup" msgid="5750393553605388463">"Configuration"</string>
@@ -4879,7 +4879,7 @@
     <string name="multiple_users_main_switch_keywords" msgid="4845954458094134356">"autoriser, plusieurs, utilisateur, permettre, beaucoup"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Utiliser le débogage sans fil"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Utiliser les préférences du pilote graphique"</string>
-    <string name="night_light_main_switch_title" msgid="3428298022467805219">"Utiliser le mode Éclairage nocturne"</string>
+    <string name="night_light_main_switch_title" msgid="3428298022467805219">"Utiliser l\'Éclairage nocturne"</string>
     <string name="nfc_main_switch_title" msgid="6295839988954817432">"Utiliser la technologie CCP"</string>
     <string name="adaptive_brightness_main_switch_title" msgid="2681666805191642737">"Utiliser la luminosité adaptative"</string>
     <string name="wifi_calling_main_switch_title" msgid="4070224008346815634">"Utiliser les appels Wi-Fi"</string>
