--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -1987,7 +1987,7 @@
     <string name="accessibility_settings_title" msgid="6739115703615065716">"Setelan aksesibilitas"</string>
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"Tampilan, interaksi, audio"</string>
     <string name="vision_settings_title" msgid="8919983801864103069">"Setelan Pandangan"</string>
-    <string name="vision_settings_description" msgid="7614894785054441991">"Anda dapat menyesuaikan perangkat ini sesuai kebutuhan. Fitur aksesibilitas ini dapat diubah nanti di Setelan."</string>
+    <string name="vision_settings_description" msgid="7614894785054441991">"Anda dapat menyesuaikan perangkat ini menurut kebutuhan. Fitur aksesibilitas ini dapat diubah nanti di Setelan."</string>
     <string name="vision_settings_suggestion_title" msgid="4689275412658803919">"Ubah ukuran font"</string>
     <string name="screen_reader_category_title" msgid="5825700839731107803">"Pembaca layar"</string>
     <string name="keyboard_category_title" msgid="6841712758039893220">"Opsi keyboard fisik"</string>
@@ -2023,7 +2023,7 @@
     <string name="bt_hci_snoop_log_filtered_mode_disabled_summary" msgid="8824952559433361848">"Setel mode log snoop HCI Bluetooth ke Diaktifkan Difilter untuk mengubah opsi ini"</string>
     <string name="talkback_title" msgid="8756080454514251327">"TalkBack"</string>
     <string name="talkback_summary" msgid="5820927220378864281">"Pembaca layar khusus untuk orang yang mengalami kebutaan atau gangguan penglihatan"</string>
-    <string name="select_to_speak_summary" msgid="1995285446766920925">"Ketuk item di layar untuk mendengar item tersebut dibacakan"</string>
+    <string name="select_to_speak_summary" msgid="1995285446766920925">"Ketuk item di layar untuk mendengarkannya diucapkan"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"Preferensi teks"</string>
     <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"Tentang preferensi teks"</string>
     <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"Pelajari preferensi teks lebih lanjut"</string>
@@ -2911,7 +2911,7 @@
     <string name="user_list_title" msgid="1387379079186123404">"Pengguna &amp; profil"</string>
     <string name="user_add_user_or_profile_menu" msgid="305851380425838287">"Tambahkan pengguna atau profil"</string>
     <string name="user_summary_restricted_profile" msgid="451650609582185813">"Profil dibatasi"</string>
-    <string name="user_summary_not_set_up" msgid="4602868481732886115">"Tidak disiapkan"</string>
+    <string name="user_summary_not_set_up" msgid="4602868481732886115">"Belum disetel"</string>
     <string name="user_summary_restricted_not_set_up" msgid="1658946988920104613">"Tidak disiapkan - Profil dibatasi"</string>
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"Tidak disiapkan - Profil kerja"</string>
     <string name="user_admin" msgid="4024553191395768119">"Admin"</string>
