--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -273,7 +273,7 @@
     <string name="owner_info_settings_title" msgid="3555626140700093017">"ଲକ ସ୍କ୍ରିନରେ ଟେକ୍ସଟ ଯୋଗ କରନ୍ତୁ"</string>
     <string name="owner_info_settings_summary" msgid="347238313388083297">"କିଛି ନାହିଁ"</string>
     <string name="owner_info_settings_edit_text_hint" msgid="841926875876050274">"ଯେପରିକି ଶୁଭ୍ରାର Android।"</string>
-    <string name="location_settings_title" msgid="8375074508036087178">"ଲୋକେସନ୍‌"</string>
+    <string name="location_settings_title" msgid="8375074508036087178">"ଲୋକେସନ"</string>
     <string name="location_settings_primary_switch_title" msgid="8849081766644685127">"ଲୋକେସନ ବ୍ୟବହାର କରନ୍ତୁ"</string>
     <string name="location_settings_summary_location_off" msgid="4797932754681162262">"ବନ୍ଦ"</string>
     <string name="location_settings_summary_location_on" msgid="4273299717586679786">"{count,plural, =1{ଚାଲୁ ଅଛି / # ଆପର ଲୋକେସନକୁ ଆକ୍ସେସ ଅଛି}other{ଚାଲୁ ଅଛି / # ଆପ୍ସର ଲୋକେସନକୁ ଆକ୍ସେସ ଅଛି}}"</string>
@@ -763,7 +763,7 @@
     <string name="lockpassword_password_too_short" msgid="1938086368137797700">"{count,plural, =1{ଅତି କମରେ #ଟି କେରେକ୍ଟର ରହିବା ଆବଶ୍ୟକ}other{ଅତି କମରେ #ଟି କେରେକ୍ଟର ରହିବା ଆବଶ୍ୟକ}}"</string>
     <string name="lockpassword_password_too_short_all_numeric" msgid="4301294924022401502">"{count,plural, =1{ଯଦି କେବଳ ସଂଖ୍ୟା ବ୍ୟବହାର କରୁଛନ୍ତି, ତେବେ ଏହା ଅତିକମରେ 1 ଅଙ୍କ ବିଶିଷ୍ଟ ହେବା ଆବଶ୍ୟକ}other{ଯଦି କେବଳ ସଂଖ୍ୟା ବ୍ୟବହାର କରୁଛନ୍ତି, ତେବେ ଏହା ଅତିକମରେ # ଅଙ୍କ ବିଶିଷ୍ଟ ହେବା ଆବଶ୍ୟକ}}"</string>
     <string name="lockpassword_pin_too_short" msgid="8910105226463085689">"{count,plural, =1{PINରେ ଅତି କମରେ #ଟି ଅଙ୍କ ରହିବା ଆବଶ୍ୟକ}other{PINରେ ଅତି କମରେ #ଟି ଅଙ୍କ ରହିବା ଆବଶ୍ୟକ}}"</string>
-    <string name="lockpassword_pin_too_short_autoConfirm_extra_message" msgid="3271351502900762571">"{count,plural, =1{PINରେ ଅତିକମରେ #ଟି ଅଙ୍କ ରହିବା ଆବଶ୍ୟକ, କିନ୍ତୁ ଅତିରିକ୍ତ ସୁରକ୍ଷା ପାଇଁ ଏକ {minAutoConfirmLen}-ଅଙ୍କ ବିଶିଷ୍ଟ PIN ସୁପାରିଶ କରାଯାଏ}other{PINରେ ଅତିକମରେ #ଟି ଅଙ୍କ ରହିବା ଆବଶ୍ୟକ, କିନ୍ତୁ ଅତିରିକ୍ତ ସୁରକ୍ଷା ପାଇଁ ଏକ {minAutoConfirmLen}-ଅଙ୍କ ବିଶିଷ୍ଟ PIN ସୁପାରିଶ କରାଯାଏ}}"</string>
+    <string name="lockpassword_pin_too_short_autoConfirm_extra_message" msgid="3271351502900762571">"{count,plural, =1{PINରେ ଅତିକମରେ # ଅଙ୍କ ରହିବା ଆବଶ୍ୟକ, କିନ୍ତୁ ଅତିରିକ୍ତ ସୁରକ୍ଷା ପାଇଁ ଏକ {minAutoConfirmLen}-ଅଙ୍କ ବିଶିଷ୍ଟ PIN ସୁପାରିଶ କରାଯାଏ}other{PINରେ ଅତିକମରେ # ଅଙ୍କ ରହିବା ଆବଶ୍ୟକ, କିନ୍ତୁ ଅତିରିକ୍ତ ସୁରକ୍ଷା ପାଇଁ ଏକ {minAutoConfirmLen}-ଅଙ୍କ ବିଶିଷ୍ଟ PIN ସୁପାରିଶ କରାଯାଏ}}"</string>
     <string name="lockpassword_password_too_long" msgid="1940345313260498308">"{count,plural, =1{#ଟିରୁ କମ କେରେକ୍ଟର ରହିବା ଆବଶ୍ୟକ}other{#ଟିରୁ କମ କେରେକ୍ଟର ରହିବା ଆବଶ୍ୟକ}}"</string>
     <string name="lockpassword_pin_too_long" msgid="1678212054564388576">"{count,plural, =1{#ଟିରୁ କମ ଅଙ୍କ ରହିବା ଆବଶ୍ୟକ}other{#ଟିରୁ କମ ଅଙ୍କ ରହିବା ଆବଶ୍ୟକ}}"</string>
     <string name="lockpassword_pin_recently_used" msgid="6650277060998923465">"ଏକ ସାମ୍ପ୍ରତିକ ପିନ୍‌ର ବ୍ୟବହାରକୁ ଡିଭାଇସ୍‌ ଆଡ୍‌ମିନ୍‌ ଅନୁମତି ଦେବନାହିଁ"</string>
@@ -1024,7 +1024,7 @@
     <string name="wifi_modify" msgid="5127926476383659412">"ସଂଶୋଧନ"</string>
     <string name="wifi_save" msgid="2312643132472226807">"ସେଭ୍‍ କରନ୍ତୁ"</string>
     <string name="wifi_failed_save_message" msgid="1830279872341387120">"ନେଟୱାର୍କ୍‌ ସେଭ୍‌ କରି ପାରିଲା ନାହିଁ"</string>
-    <string name="wifi_cancel" msgid="6698897376888935410">"ବାତିଲ"</string>
+    <string name="wifi_cancel" msgid="6698897376888935410">"ବାତିଲ କରନ୍ତୁ"</string>
     <string name="wifi_forget_dialog_title" msgid="4363829200968563164">"ନେଟୱର୍କକୁ ଭୁଲିଯିବେ?"</string>
     <string name="wifi_saved_access_points_summary" msgid="6637163320524940353">"{count,plural, =1{1ଟି ନେଟୱାର୍କ}other{#ଟି ନେଟୱାର୍କ}}"</string>
     <string name="wifi_saved_passpoint_access_points_summary" msgid="8939933724918673785">"{count,plural, =1{1ଟି ସଦସ୍ୟତା}other{#ଟି ସଦସ୍ୟତା}}"</string>
@@ -1431,7 +1431,7 @@
     <string name="apn_apn" msgid="5812828833797458602">"APN"</string>
     <string name="apn_http_proxy" msgid="1052464912365838007">"ପ୍ରକ୍ସି"</string>
     <string name="apn_http_port" msgid="9138610639873966046">"ପୋର୍ଟ"</string>
-    <string name="apn_user" msgid="5831763936428279228">"ୟୁଜରଙ୍କ ନାମ"</string>
+    <string name="apn_user" msgid="5831763936428279228">"ୟୁଜରନେମ"</string>
     <string name="apn_password" msgid="7435086635953953029">"ପାସୱାର୍ଡ"</string>
     <string name="apn_server" msgid="6997704279138388384">"ସର୍ଭର:"</string>
     <string name="apn_mmsc" msgid="4985570919581927224">"MMSC"</string>
@@ -1441,8 +1441,8 @@
     <string name="apn_mnc" msgid="1926382406843447854">"MNC"</string>
     <string name="apn_auth_type" msgid="4234397513494356932">"ପ୍ରମାଣୀକରଣ ପ୍ରକାର"</string>
     <string name="apn_type" msgid="1835573305077788773">"APN ପ୍ରକାର"</string>
-    <string name="apn_protocol" msgid="181529867160380010">"APN ପ୍ରୋଟୋକଲ୍‌"</string>
-    <string name="apn_roaming_protocol" msgid="1645131094105362513">"APN ରୋମିଙ୍ଗ ପ୍ରୋଟୋକୋଲ"</string>
+    <string name="apn_protocol" msgid="181529867160380010">"APN ପ୍ରୋଟୋକଲ"</string>
+    <string name="apn_roaming_protocol" msgid="1645131094105362513">"APN ରୋମିଂ ପ୍ରୋଟୋକଲ"</string>
     <string name="carrier_enabled" msgid="664074151573150130">"APN ସକ୍ଷମ/ଅକ୍ଷମ"</string>
     <string name="carrier_enabled_summaryOn" msgid="5212067975273903381">"APN ସକ୍ରିୟ ହୋଇଛି"</string>
     <string name="carrier_enabled_summaryOff" msgid="8541959867953738521">"APN ଅକ୍ଷମ ହୋଇଛି"</string>
@@ -1624,7 +1624,7 @@
     <string name="lockpassword_choose_your_pin_header_for_biometrics" msgid="9086039918921009380">"ଫେସ ବା ଟିପଚିହ୍ନ ବ୍ୟବହାର କରିବାକୁ ଏକ PIN ସେଟ କରନ୍ତୁ"</string>
     <string name="lockpassword_forgot_password" msgid="5730587692489737223">"ଆପଣଙ୍କ ପାସୱାର୍ଡ ଭୁଲି ଯାଇଛନ୍ତି କି?"</string>
     <string name="lockpassword_forgot_pattern" msgid="1196116549051927516">"ପାଟର୍ନ ଭୁଲି ଯାଇଛନ୍ତି କି?"</string>
-    <string name="lockpassword_forgot_pin" msgid="7164232234705747672">"PIN ଭୁଲି ଯାଇଛନ୍ତି କି?"</string>
+    <string name="lockpassword_forgot_pin" msgid="7164232234705747672">"PIN ଭୁଲି ଯାଇଛନ୍ତି?"</string>
     <string name="lockpassword_confirm_your_pattern_generic" msgid="7401165571170203743">"ଜାରି ରଖିବାକୁ ଆପଣଙ୍କ ପାଟର୍ନ ଡ୍ର କରନ୍ତୁ"</string>
     <string name="lockpassword_confirm_your_pin_generic" msgid="8990266101852808091">"ଜାରି ରଖିବାକୁ ଆପଣଙ୍କ PIN ଲେଖନ୍ତୁ"</string>
     <string name="lockpassword_confirm_your_password_generic" msgid="8823867445451497224">"ଜାରି ରଖିବାକୁ ଆପଣଙ୍କ ପାସୱାର୍ଡ ଲେଖନ୍ତୁ"</string>
@@ -2022,12 +2022,12 @@
     <string name="bt_hci_snoop_log_filter_summary" msgid="7217091930762522599">"ଫିଲ୍ଟରିଂ ମୋଡ ସେଟ କରନ୍ତୁ। (ପରିବର୍ତ୍ତନଗୁଡ଼ିକ କାର୍ଯ୍ୟକାରୀ ହେବା ପାଇଁ ବ୍ଲୁଟୁଥକୁ ଅକ୍ଷମ କରି ସକ୍ଷମ କରନ୍ତୁ)"</string>
     <string name="bt_hci_snoop_log_filtered_mode_disabled_summary" msgid="8824952559433361848">"ଏହି ବିକଳ୍ପ ବଦଳାଇବାକୁ ବ୍ଲୁଟୁଥ HCI ସ୍ନୁପ ଲଗ ମୋଡକୁ \'ସକ୍ଷମ କରାଯାଇଛି ବା ଫିଲ୍ଟର କରାଯାଇଛି\'ରେ ସେଟ କରନ୍ତୁ"</string>
     <string name="talkback_title" msgid="8756080454514251327">"Talkback"</string>
-    <string name="talkback_summary" msgid="5820927220378864281">"ଦୃଷ୍ଟିହୀନ କିମ୍ବା କମ୍‌ ଦୃଷ୍ଟି ଶକ୍ତିଥିବା ଲୋକଙ୍କ ପାଇଁ ମୁଖ୍ୟତଃ ସ୍କ୍ରିନ୍‌ ରିଡର୍‌ ଅଟେ"</string>
-    <string name="select_to_speak_summary" msgid="1995285446766920925">"ଜୋରରେ ଶୁଣିବା ପାଇଁ ସ୍କ୍ରିନ୍‌ ଉପରେ ଥିବା ଆଇଟମଗୁଡ଼ିକ ଉପରେ ଟାପ୍‌ କରନ୍ତୁ"</string>
+    <string name="talkback_summary" msgid="5820927220378864281">"ଦୃଷ୍ଟିହୀନ କିମ୍ବା କମ ଦୃଷ୍ଟି ଶକ୍ତିଥିବା ଲୋକଙ୍କ ପାଇଁ ସ୍କ୍ରିନ ରିଡର"</string>
+    <string name="select_to_speak_summary" msgid="1995285446766920925">"ଜୋରରେ ଶୁଣିବା ପାଇଁ ସ୍କ୍ରିନରେ ଥିବା ଆଇଟମଗୁଡ଼ିକ ଉପରେ ଟାପ କରନ୍ତୁ"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"କେପସନ ପସନ୍ଦଗୁଡ଼ିକ"</string>
     <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"କ୍ୟାପ୍ସନ୍ ପସନ୍ଦଗୁଡ଼ିକ ବିଷୟରେ"</string>
     <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"କ୍ୟାପ୍ସନ୍ ପସନ୍ଦଗୁଡ଼ିକ ବିଷୟରେ ଅଧିକ ଜାଣନ୍ତୁ"</string>
-    <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"ମ୍ୟାଗ୍ନିଫିକେସନ୍"</string>
+    <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"ମେଗ୍ନିଫିକେସନ"</string>
     <string name="accessibility_screen_magnification_shortcut_title" msgid="2387963646377987780">"ମେଗ୍ନିଫିକେସନ ସର୍ଟକଟ"</string>
     <string name="accessibility_screen_magnification_follow_typing_title" msgid="6379517513916651560">"ଟାଇପିଂ ମେଗ୍ନିଫାଏ କରନ୍ତୁ"</string>
     <string name="accessibility_screen_magnification_follow_typing_summary" msgid="2882250257391761678">"ଆପଣ ଟାଇପ କରିବା ବେଳେ ମେଗ୍ନିଫାୟର ଟେକ୍ସଟକୁ ଅନୁସରଣ କରେ"</string>
@@ -2071,11 +2071,11 @@
     <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"ସପ୍ତାହାନ୍ତ ପାଇଁ କୌଣସି ପ୍ଲାନ ଅଛି?"</string>
     <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"ବେଳାଭୂମିକୁ ବୁଲିବା ପାଇଁ ଯାଉଛି। ଯୋଗ ଦେବାକୁ ଚାହୁଁଛନ୍ତି?"</string>
     <string name="accessibility_screen_option" msgid="8465307075278878145">"ବିକଳ୍ପଗୁଡ଼ିକ"</string>
-    <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"ସ୍କ୍ରିନ୍‌ ଉପରେ ଜୁମ୍‌ ଇନ୍‌ କରନ୍ତୁ"</string>
+    <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"ସ୍କ୍ରିନରେ ଜୁମ ଇନ କରନ୍ତୁ"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"ଜୁମ୍‌ କରିବାକୁ 3ଥର ଟାପ୍‌ କରନ୍ତୁ"</string>
     <string name="accessibility_screen_magnification_navbar_short_summary" msgid="4885018322430052037">"ଜୁମ୍‌ କରିବା ପାଇଁ ଗୋଟିଏ ବଟନ୍‌ ଉପରେ ଟାପ୍‌ କରନ୍ତୁ"</string>
     <string name="accessibility_screen_magnification_intro_text" msgid="3856180549393526339">"ବିଷୟବସ୍ତୁକୁ ଆହୁରି ବଡ଼ କରିବା ପାଇଁ ସ୍କ୍ରିନରେ ଶୀଘ୍ର ଜୁମ ଇନ କରନ୍ତୁ"</string>
-    <string name="accessibility_screen_magnification_summary" msgid="8267672508057326959">"&lt;b&gt;ଜୁମ ଇନ କରିବାକୁ:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. ମ୍ୟାଗ୍ନିଫିକେସନ ଆରମ୍ଭ କରିବାକୁ ସର୍ଟକଟ ବ୍ୟବହାର କରନ୍ତୁ&lt;br/&gt; {1,number,integer}. ସ୍କ୍ରିନରେ ଟାପ କରନ୍ତୁ&lt;br/&gt; {2,number,integer}. ସ୍କ୍ରିନର ଚାରିପଟେ ମୁଭ କରିବାକୁ 2ଟି ଆଙ୍ଗୁଠିରେ ଡ୍ରାଗ କରନ୍ତୁ&lt;br/&gt; {3,number,integer}. ଜୁମ ଆଡଜଷ୍ଟ କରିବାକୁ 2ଟି ଆଙ୍ଗୁଠିରେ ପିଞ୍ଚ କରନ୍ତୁ&lt;br/&gt; {4,number,integer}. ମ୍ୟାଗ୍ନିଫିକେସନ ବନ୍ଦ କରିବାକୁ ସର୍ଟକଟ ବ୍ୟବହାର କରନ୍ତୁ&lt;br/&gt;&lt;br/&gt; &lt;b&gt;ଅସ୍ଥାୟୀ ଭାବେ ଜୁମ ଇନ କରିବାକୁ:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. ଆପଣଙ୍କ ମ୍ୟାଗ୍ନିଫିକେସନ ପ୍ରକାର ପୂର୍ଣ୍ଣ ସ୍କ୍ରିନରେ ସେଟ ହୋଇଥିବା ସୁନିଶ୍ଚିତ କରନ୍ତୁ&lt;br/&gt; {1,number,integer}. ମ୍ୟାଗ୍ନିଫିକେସନ ଆରମ୍ଭ କରିବାକୁ ସର୍ଟକଟ ବ୍ୟବହାର କରନ୍ତୁ&lt;br/&gt; {2,number,integer}. ସ୍କ୍ରିନରେ ଯେ କୌଣସି ସ୍ଥାନରେ ସ୍ପର୍ଶ କରି ଧରି ରଖନ୍ତୁ&lt;br/&gt; {3,number,integer}. ସ୍କ୍ରିନର ଚାରିପଟେ ମୁଭ କରିବାକୁ ଆଙ୍ଗୁଠିରେ ଡ୍ରାଗ କରନ୍ତୁ&lt;br/&gt; {4,number,integer}. ମ୍ୟାଗ୍ନିଫିକେସନ ବନ୍ଦ କରିବା ପାଇଁ ଆଙ୍ଗୁଠିକୁ ଉଠାନ୍ତୁ"</string>
+    <string name="accessibility_screen_magnification_summary" msgid="8267672508057326959">"&lt;b&gt;ଜୁମ ଇନ କରିବାକୁ:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. ମେଗ୍ନିଫିକେସନ ଆରମ୍ଭ କରିବାକୁ ସର୍ଟକଟ ବ୍ୟବହାର କରନ୍ତୁ&lt;br/&gt; {1,number,integer}. ସ୍କ୍ରିନରେ ଟାପ କରନ୍ତୁ&lt;br/&gt; {2,number,integer}. ସ୍କ୍ରିନର ଚାରିପଟେ ମୁଭ କରିବାକୁ 2 ଆଙ୍ଗୁଠିରେ ଡ୍ରାଗ କରନ୍ତୁ&lt;br/&gt; {3,number,integer}. ଜୁମ ଆଡଜଷ୍ଟ କରିବାକୁ 2 ଆଙ୍ଗୁଠିରେ ପିଞ୍ଚ କରନ୍ତୁ&lt;br/&gt; {4,number,integer}. ମେଗ୍ନିଫିକେସନ ବନ୍ଦ କରିବାକୁ ସର୍ଟକଟ ବ୍ୟବହାର କରନ୍ତୁ&lt;br/&gt;&lt;br/&gt; &lt;b&gt;ଅସ୍ଥାୟୀ ଭାବେ ଜୁମ ଇନ କରିବାକୁ:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. ଆପଣଙ୍କ ମେଗ୍ନିଫିକେସନ ପ୍ରକାର ପୂର୍ଣ୍ଣ ସ୍କ୍ରିନରେ ସେଟ ହୋଇଥିବା ସୁନିଶ୍ଚିତ କରନ୍ତୁ&lt;br/&gt; {1,number,integer}. ମେଗ୍ନିଫିକେସନ ଆରମ୍ଭ କରିବାକୁ ସର୍ଟକଟ ବ୍ୟବହାର କରନ୍ତୁ&lt;br/&gt; {2,number,integer}. ସ୍କ୍ରିନରେ ଯେ କୌଣସି ସ୍ଥାନରେ ସ୍ପର୍ଶ କରି ଧରି ରଖନ୍ତୁ&lt;br/&gt; {3,number,integer}. ସ୍କ୍ରିନର ଚାରିପଟେ ମୁଭ କରିବାକୁ ଆଙ୍ଗୁଠିରେ ଡ୍ରାଗ କରନ୍ତୁ&lt;br/&gt; {4,number,integer}. ମେଗ୍ନିଫିକେସନ ବନ୍ଦ କରିବା ପାଇଁ ଆଙ୍ଗୁଠିକୁ ଉଠାନ୍ତୁ"</string>
     <string name="accessibility_screen_magnification_navbar_summary" msgid="807985499898802296">"ମ୍ୟାଗ୍ନିଫିକେସନ୍ ଚାଲୁଥିବା ସମୟରେ, ଆପଣଙ୍କ ସ୍କ୍ରିନ୍‌ର ଜୁମ୍ ବଢ଼ାଇ ପାରିବେ।\n\n"<b>"ଜୁମ୍ କରିବାକୁ"</b>", ମ୍ୟାଗ୍ନିଫିକେସନ୍ ଆରମ୍ଭ କରନ୍ତୁ, ତା’ପରେ ସ୍କ୍ରିନ୍‌ର ଯେ କୌଣସି ସ୍ଥାନରେ ଟାପ୍ କରନ୍ତୁ।\n"<ul><li>"ସ୍କ୍ରୋଲ୍ କରିବାକୁ 2 ବା ଅଧିକ ଆଙ୍ଗୁଠିରେ ଟାଣନ୍ତୁ"</li>\n<li>"ଜୁମ୍ ଆଡ୍‌ଜଷ୍ଟ କରିବାକୁ 2 ବା ଅଧିକ ଆଙ୍ଗୁଠିରେ ପିଞ୍ଚ୍ କରନ୍ତୁ"</li></ul>\n\n<b>"ଅସ୍ଥାୟୀ ଭାବେ ଜୁମ୍ କରିବାକୁ"</b>", ମ୍ୟାଗ୍ନିଫିକେସନ୍ ଆରମ୍ଭ କରନ୍ତୁ, ତା’ପରେ ସ୍କ୍ରିନ୍‌ର ଯେ କୌଣସି ସ୍ଥାନରେ ସ୍ପର୍ଶ କରି ଧରି ରଖନ୍ତୁ।\n"<ul><li>"ସ୍କ୍ରିନ୍‌ର ଚାରିପଟରେ ଘୁଞ୍ଚାଇବାକୁ ଟାଣନ୍ତୁ"</li>\n<li>"ଜୁମ୍ କମାଇବାକୁ ଆଙ୍ଗୁଠି ବାହାର କରି ଦିଅନ୍ତୁ"</li></ul>\n\n"ଆପଣ କୀବୋର୍ଡ ବା ନେଭିଗେସନ୍ ବାର୍ ଉପରେ ଜୁମ୍ ବଢ଼ାଇ ପାରିବେ ନାହିଁ।"</string>
     <string name="accessibility_tutorial_pager" msgid="8461939455728454061">"<xliff:g id="NUM_PAGES">%2$d</xliff:g> ମଧ୍ୟରୁ <xliff:g id="CURRENT_PAGE">%1$d</xliff:g> ପୃଷ୍ଠା"</string>
     <string name="accessibility_tutorial_dialog_title_button" msgid="4681164949716215131">"ଖୋଲିବା ପାଇଁ ଆକ୍ସେସିବିଲିଟୀ ବଟନ ବ୍ୟବହାର କରନ୍ତୁ"</string>
@@ -2141,8 +2141,8 @@
     <string name="accessibility_button_opacity_title" msgid="4727355657530362289">"ବ୍ୟବହାରରେ ନଥିବା ବେଳେ ଟ୍ରାନ୍ସପେରେଣ୍ଟ ଥାଏ"</string>
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"ଟ୍ରାନ୍ସପେରେଣ୍ଟ"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"ନନ୍-ଟ୍ରାନ୍ସପେରେଣ୍ଟ"</string>
-    <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"ଉଚ୍ଚ କଣ୍ଟ୍ରାଷ୍ଟଯୁକ୍ତ ଟେକ୍ସଟ୍‌"</string>
-    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"ଟେକ୍ସଟର ରଙ୍ଗକୁ କଳା କିମ୍ବା ଧଳା ରଙ୍ଗରେ ପରିବର୍ତ୍ତନ କରନ୍ତୁ। ପୃଷ୍ଠପଟ ସହିତ କଣ୍ଟ୍ରାଷ୍ଟ ବଢ଼ାଏ।"</string>
+    <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"ଉଚ୍ଚ କଣ୍ଟ୍ରାଷ୍ଟଯୁକ୍ତ ଟେକ୍ସଟ"</string>
+    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"ଟେକ୍ସଟର ରଙ୍ଗକୁ କଳା କିମ୍ବା ଧଳା ରଙ୍ଗରେ ପରିବର୍ତ୍ତନ କରନ୍ତୁ। ବେକଗ୍ରାଉଣ୍ଡ ସହିତ କଣ୍ଟ୍ରାଷ୍ଟ ବଢ଼ାନ୍ତୁ।"</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"ଟେକ୍ସଟର କଣ୍ଟ୍ରାଷ୍ଟ ସର୍ବାଧିକ କରନ୍ତୁ"</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_summary" msgid="5493999083693403489">"ପୃଷ୍ଠପଟ ଅନୁସାରେ କଣ୍ଟ୍ରାଷ୍ଟ ବଢ଼ାଇବାକୁ ଟେକ୍ସଟର ରଙ୍ଗ କଳା କିମ୍ବା ଧଳାରେ ପରିବର୍ତ୍ତନ କରନ୍ତୁ।"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_title" msgid="4987009529235165664">"ସ୍କ୍ରିନ୍‌ ମ୍ୟାଗ୍ନିଫାୟର୍‌ ସ୍ୱତଃ ଅପଡେଟ୍‌ କରନ୍ତୁ"</string>
@@ -2392,7 +2392,7 @@
     <string name="print_print_jobs" msgid="2605944855933091183">"ପ୍ରିଣ୍ଟ ଜବ୍‌"</string>
     <string name="print_print_job" msgid="8477859161886726608">"ପ୍ରିଣ୍ଟ ଜବ୍‌"</string>
     <string name="print_restart" msgid="4424096106141083945">"ରିଷ୍ଟାର୍ଟ କରନ୍ତୁ"</string>
-    <string name="print_cancel" msgid="7611266511967568501">"ବାତିଲ"</string>
+    <string name="print_cancel" msgid="7611266511967568501">"ବାତିଲ କରନ୍ତୁ"</string>
     <string name="print_job_summary" msgid="277210060872032969">"<xliff:g id="PRINTER">%1$s</xliff:g>\n<xliff:g id="TIME">%2$s</xliff:g>"</string>
     <string name="print_configuring_state_title_template" msgid="2887013172492183045">"<xliff:g id="PRINT_JOB_NAME">%1$s</xliff:g> କନଫିଗର୍‌ କରାଯାଉଛି"</string>
     <string name="print_printing_state_title_template" msgid="7367513245156603431">"<xliff:g id="PRINT_JOB_NAME">%1$s</xliff:g> ପ୍ରିଣ୍ଟ ହେଉଛି"</string>
@@ -4518,7 +4518,7 @@
     <string name="carrier_settings_title" msgid="6959295328730560529">"କ୍ୟାରିଅର ସେଟିଂସ"</string>
     <string name="cdma_lte_data_service" msgid="6937443423651347345">"ଡାଟା ସେବା ସେଟ୍‌ଅପ୍ କରନ୍ତୁ"</string>
     <string name="mobile_data_settings_title" msgid="3927524078598009792">"ମୋବାଇଲ୍ ଡାଟା"</string>
-    <string name="mobile_data_settings_summary" msgid="7323978798199919063">"ମୋବାଇଲ୍ ନେଟ୍‌ୱର୍କକୁ ବ୍ୟବହାର କରି ଡାଟା ଆକ୍ସେସ୍ କରନ୍ତୁ"</string>
+    <string name="mobile_data_settings_summary" msgid="7323978798199919063">"ମୋବାଇଲ ନେଟୱର୍କକୁ ବ୍ୟବହାର କରି ଡାଟା ଆକ୍ସେସ କରନ୍ତୁ"</string>
     <string name="mobile_data_settings_summary_auto_switch" msgid="7851549787645698945">"ରେଞ୍ଜରେ ରହିଲେ ଫୋନ୍ ସ୍ୱଚାଳିତ ଭାବେ ଏହି ବାହକକୁ ସ୍ବିଚ୍ ହୋଇଯିବ"</string>
     <string name="mobile_data_settings_summary_unavailable" msgid="9176513507571883986">"କୌଣସି SIM ଉପଲବ୍ଧ ନାହିଁ"</string>
     <string name="calls_preference" msgid="2166481296066890129">"କଲ ପାଇଁ ପସନ୍ଦ"</string>
