--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -3072,7 +3072,7 @@
     <string name="network_dashboard_summary_mobile" msgid="7750924671970583670">"Data ya simu, Wi‑Fi, mtandaopepe"</string>
     <string name="network_dashboard_summary_no_mobile" msgid="4022575916334910790">"Wi-Fi, mtandao pepe"</string>
     <string name="connected_devices_dashboard_title" msgid="19868275519754895">"Vifaa vilivyounganishwa"</string>
-    <string name="connected_devices_dashboard_default_summary" msgid="7211769956193710397">"Bluetooth, kuoanisha"</string>
+    <string name="connected_devices_dashboard_default_summary" msgid="7211769956193710397">"Bluetooth, kuunganisha"</string>
     <string name="connected_devices_dashboard_summary" msgid="6927727617078296491">"Bluetooth, hali ya kuendesha gari, NFC"</string>
     <string name="connected_devices_dashboard_no_nfc_summary" msgid="8424794257586524040">"Bluetooth, hali ya kuendesha gari"</string>
     <string name="connected_devices_dashboard_no_driving_mode_summary" msgid="7155882619333726331">"Bluetooth, NFC"</string>
