--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -1642,7 +1642,7 @@
     <string name="lockpassword_confirm_your_password_header_frp" msgid="7932240547542564033">"கடவுச்சொல்லைச் சரிபார்க்கவும்"</string>
     <string name="lockpassword_remote_validation_header" msgid="4992647285784962073">"நீங்கள்தானா?"</string>
     <string name="lockpassword_remote_validation_pattern_details" msgid="4655537780358707983">"Google கணக்குகள், அமைப்புகள் மற்றும் பலவற்றை மாற்ற உங்கள் மற்றொரு சாதனத்தின் பேட்டர்னை உள்ளிடுங்கள். உங்கள் பேட்டர்ன் என்க்ரிப்ட் செய்யப்பட்டுள்ளது."</string>
-    <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Google கணக்குகள், அமைப்புகள் மற்றும் பலவற்றை மாற்ற உங்கள் மற்றொரு சாதனத்தின் பின்னை உள்ளிடுங்கள். உங்கள் பின் என்க்ரிப்ட் செய்யப்பட்டுள்ளது."</string>
+    <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Google கணக்குகள், அமைப்புகள் மற்றும் பலவற்றை இங்கு மாற்ற உங்கள் மற்றொரு சாதனத்தின் பின்னை உள்ளிடுங்கள். உங்கள் பின் என்க்ரிப்ட் செய்யப்பட்டுள்ளது."</string>
     <string name="lockpassword_remote_validation_password_details" msgid="3482328925925888340">"Google கணக்குகள், அமைப்புகள் மற்றும் பலவற்றை மாற்ற உங்கள் மற்றொரு சாதனத்தின் கடவுச்சொல்லை உள்ளிடுங்கள். உங்கள் கடவுச்சொல் என்க்ரிப்ட் செய்யப்பட்டுள்ளது."</string>
     <string name="lockpassword_remote_validation_set_pattern_as_screenlock" msgid="7595104317648465901">"சாதனம் அன்லாக் செய்யப்பட பேட்டர்ன் பயன்படுத்து"</string>
     <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"சாதனம் அன்லாக் செய்யப்பட பின் பயன்படுத்து"</string>
@@ -2066,7 +2066,7 @@
     <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"காலை வணக்கம்!\n\nடிசைன்கள் எவ்வாறு உள்ளன என்பதைச் சரிபார்க்க விரும்புகிறேன். புதிய பலூன்களை நாங்கள் உருவாக்கத் தொடங்கும் முன்பாக அவை தயாராகிவிடுமா?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"அமைப்புகளை ரீசெட் செய்தல்"</string>
     <string name="accessibility_text_reading_reset_message" msgid="824644303661026712">"காட்சி அளவும் வார்த்தை அமைப்புகளும் ரீசெட் செய்யப்பட்டன"</string>
-    <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"காட்சியின் அளவையும் வார்த்தைகளுக்கான விருப்பத்தேர்வுகளையும் ரீசெட் செய்யவா?"</string>
+    <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"காட்சி, வார்த்தை அளவுகளை  ரீசெட் செய்யவா?"</string>
     <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"ரீசெட் செய்"</string>
     <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"வாரயிறுதி நாட்களில் ஏதேனும் திட்டங்கள் உள்ளதா?"</string>
     <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"கடற்கரைக்குச் செல்கிறோம். நீங்களும் வருகிறீர்களா?"</string>
