--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -382,7 +382,7 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"為獲得最佳效果，請使用已通過 Made for Google 認證的螢幕保護貼。如果使用其他螢幕保護貼，系統可能無法辨識子女的指紋。"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_activeunlock_preference_title" msgid="4257580421087062228">"手錶解鎖"</string>
-    <string name="biometric_settings_intro_with_activeunlock" msgid="5032953826653108646">"設定「面孔解鎖」和「指紋解鎖」時，如果你戴著口罩或人在昏暗的地方，手機就會要求你註冊指紋。\n\n在你手指弄濕或系統無法識別你的面孔等情況下，「手錶解鎖」是另一個方便的解鎖手機方式。"</string>
+    <string name="biometric_settings_intro_with_activeunlock" msgid="5032953826653108646">"設定「面孔解鎖」和「指紋解鎖」後，如果你戴口罩或在昏暗環境，手機就會要求你使用指紋。\n\n用「手錶解鎖」解鎖手機亦很方便，例如在手指濕了或識別不到面孔的情況。"</string>
     <string name="biometric_settings_intro_with_fingerprint" msgid="5881355884547769337">"在系統無法識別你的指紋等情況下，「手錶解鎖」是另一個方便的解鎖手機方式。"</string>
     <string name="biometric_settings_intro_with_face" msgid="7671919122230588521">"在系統無法識別你的面孔等情況下，「手錶解鎖」是另一個方便的解鎖手機方式。"</string>
     <string name="biometric_settings_use_fingerprint_or_watch_for" msgid="1160830065613858095">"使用指紋或手錶"</string>
@@ -1423,7 +1423,7 @@
     <string name="communal_settings_summary" msgid="4923914136953940317">"共用設定"</string>
     <string name="satellite_setting" msgid="4171265534842459910">"衛星訊息"</string>
     <string name="apn_settings" msgid="4295467389400441299">"APN"</string>
-    <string name="apn_edit" msgid="2003683641840248741">"編輯接入點"</string>
+    <string name="apn_edit" msgid="2003683641840248741">"編輯存取點"</string>
     <string name="apn_add" msgid="9069613192201630934">"新增存取點"</string>
     <string name="apn_not_set" msgid="8246646433109750293">"未設定"</string>
     <string name="apn_not_set_for_mvno" msgid="1141490067313964640">"未設定"</string>
@@ -2142,7 +2142,7 @@
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"透明"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"不透明"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"高對比文字"</string>
-    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"將文字顏色改成黑色或白色，盡量令文字和背景顏色有最大對比。"</string>
+    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"將文字顏色改成黑色或白色，與背景顏色形成最大對比。"</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"提高文字對比度"</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_summary" msgid="5493999083693403489">"將文字色彩改成黑色或白色，提升文字和背景之間的對比度。"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_title" msgid="4987009529235165664">"自動更新螢幕放大設定"</string>
@@ -4517,7 +4517,7 @@
     <string name="carrier_settings_title" msgid="6959295328730560529">"流動網絡供應商設定"</string>
     <string name="cdma_lte_data_service" msgid="6937443423651347345">"設定數據服務"</string>
     <string name="mobile_data_settings_title" msgid="3927524078598009792">"流動數據"</string>
-    <string name="mobile_data_settings_summary" msgid="7323978798199919063">"使用流動網絡存取數據"</string>
+    <string name="mobile_data_settings_summary" msgid="7323978798199919063">"透過流動網絡使用數據"</string>
     <string name="mobile_data_settings_summary_auto_switch" msgid="7851549787645698945">"當進入覆蓋範圍內時，手機便會自動切換至此流動網絡供應商"</string>
     <string name="mobile_data_settings_summary_unavailable" msgid="9176513507571883986">"沒有可用的 SIM 卡"</string>
     <string name="calls_preference" msgid="2166481296066890129">"通話偏好設定"</string>
@@ -4631,7 +4631,7 @@
     <string name="primary_sim_calls_title" msgid="4961189133582615685">"通話"</string>
     <string name="primary_sim_texts_title" msgid="1287584042733097749">"短訊"</string>
     <string name="primary_sim_automatic_data_title" msgid="1265528923229642480">"自動切換數據"</string>
-    <string name="primary_sim_automatic_data_msg" msgid="1612203837010785203">"按流動網絡的覆蓋範圍和適用範圍，選擇要使用哪張 SIM 卡的數據"</string>
+    <string name="primary_sim_automatic_data_msg" msgid="1612203837010785203">"根據網絡覆蓋範圍和可用情況選用 SIM 卡"</string>
     <string name="sim_onboarding_phoneNumber_data_only" msgid="8158409121949373662">"數據專用"</string>
     <string name="sim_onboarding_setup" msgid="5750393553605388463">"設定"</string>
     <string name="sim_onboarding_next" msgid="6415025179929475355">"下一頁"</string>
