--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -649,7 +649,7 @@
     <string name="lock_settings_picker_biometrics_added_security_message" msgid="1105247657304421299">"لتعزيز أمان الجهاز، يجب إعداد قفل شاشة احتياطي"</string>
     <string name="lock_settings_picker_biometric_message" msgid="2609666443527262781">"اختيار الطريقة الاحتياطية لقفل الشاشة"</string>
     <string name="lock_settings_picker_admin_restricted_personal_message" msgid="3532653662159888328">"إذا نسيت قفل شاشة هاتفك، لن يتمكَّن مشرف تكنولوجيا المعلومات من إعادة ضبطه لك."</string>
-    <string name="lock_settings_picker_admin_restricted_personal_message_action" msgid="5956615234246626264">"اضبِط قفل شاشة منفصلاً لتطبيقات العمل."</string>
+    <string name="lock_settings_picker_admin_restricted_personal_message_action" msgid="5956615234246626264">"ضبط قفل شاشة منفصل لتطبيقات العمل"</string>
     <string name="lock_settings_picker_profile_message" msgid="9142379549980873478">"لإعادة ضبط هذا القفل في حال نسيانه، يجب طلب المساعدة من مشرف تقنية المعلومات"</string>
     <string name="setup_lock_settings_options_button_label" msgid="6098297461618298505">"خيارات قفل الشاشة"</string>
     <string name="setup_lock_settings_options_dialog_title" msgid="7985107300517468569">"خيارات قفل الشاشة"</string>
@@ -1875,7 +1875,7 @@
     <string name="bounce_keys" msgid="7419450970351743904">"تجاهُل النقرات المتكرّرة"</string>
     <string name="bounce_keys_summary" msgid="7347050868868080302">"تتجاهل لوحة المفاتيح الضغطات المتكررة بسرعة على المفتاح نفسه خلال <xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> ملي ثانية"</string>
     <string name="slow_keys" msgid="2891452895499690837">"المفاتيح البطيئة"</string>
-    <string name="slow_keys_summary" msgid="1784371292745423292">"لضبط الوقت المُستغرق لتنشيط المفتاح عند الضغط عليه على <xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> ملي ثانية"</string>
+    <string name="slow_keys_summary" msgid="1784371292745423292">"لضبط المهلة قبل أن يعمل المفتاح عند الضغط عليه على <xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> ملي ثانية"</string>
     <string name="sticky_keys" msgid="7317317044898161747">"تثبيت المفاتيح"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"اضغط على مفتاح واحد في كل مرة للحصول على الاختصارات بدلاً من الضغط باستمرار على المفاتيح معًا"</string>
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"اختصارات لوحة المفاتيح"</string>
@@ -2631,7 +2631,7 @@
     <string name="tts_install_voices_cancel" msgid="5179154684379560628">"إلغاء"</string>
     <string name="tts_reset" msgid="9047681050813970031">"إعادة الضبط"</string>
     <string name="tts_play" msgid="2945513377250757221">"تشغيل"</string>
-    <string name="vpn_settings_title" msgid="9131315656202257272">"الشبكة الافتراضية الخاصة"</string>
+    <string name="vpn_settings_title" msgid="9131315656202257272">"‏شبكة VPN"</string>
     <string name="vpn_settings_insecure_single" msgid="9012504179995045195">"غير آمنة"</string>
     <string name="vpn_settings_single_insecure_multiple_total" msgid="6107225844641301139">"<xliff:g id="VPN_COUNT">%d</xliff:g> غير آمنة"</string>
     <string name="vpn_settings_multiple_insecure_multiple_total" msgid="1706236062478680488">"<xliff:g id="VPN_COUNT">%d</xliff:g> غير آمنة"</string>
@@ -2650,7 +2650,7 @@
     <string name="user_credentials_summary" msgid="686471637627271856">"عرض بيانات الاعتماد المخزَّنة وتعديلها"</string>
     <string name="advanced_security_title" msgid="7117581975877192652">"إعدادات متقدمة"</string>
     <string name="credentials_settings_not_available" msgid="7433088409177429600">"لا تتوفر بيانات الاعتماد لهذا المستخدم"</string>
-    <string name="credential_for_vpn_and_apps" msgid="2208229692860871136">"‏تم التثبيت للاستخدام بواسطة الشبكة الافتراضية الخاصة (VPN) والتطبيقات."</string>
+    <string name="credential_for_vpn_and_apps" msgid="2208229692860871136">"‏تم التثبيت للاستخدام بواسطة شبكة VPN والتطبيقات."</string>
     <string name="credential_for_wifi" msgid="2286560570630763556">"‏تم التثبيت للاستخدام بواسطة Wi-Fi"</string>
     <string name="credential_for_wifi_in_use" msgid="7276290656840986618">"‏تم التثبيت للاستخدام بواسطة Wi-Fi (قيد الاستخدام)"</string>
     <string name="credentials_reset_hint" msgid="4054601857203464867">"هل تريد إزالة جميع المحتوى؟"</string>
@@ -2661,7 +2661,7 @@
     <string name="user_certificate" msgid="6897024598058566466">"‏شهادة مستخدم التطبيق وVPN"</string>
     <string name="wifi_certificate" msgid="8461905432409380387">"‏شهادة شبكة Wi‑Fi"</string>
     <string name="ca_certificate_warning_title" msgid="7951148441028692619">"لن تكون بياناتك خاصة"</string>
-    <string name="ca_certificate_warning_description" msgid="8409850109551028774">"‏المواقع الإلكترونية والتطبيقات والشبكات الافتراضية الخاصة (VPN) تستخدِم شهادات CA للتشفير. لا تثبِّت شهادات CA إلا من المؤسسات التي تثق فيها. \n\nإذا ثبَّت شهادة CA، يمكن لمالك الشهادة الوصول إلى بياناتك، مثلاً كلمات المرور أو تفاصيل بطاقة الائتمان من المواقع الإلكترونية التي تزورها أو التطبيقات التي تستخدمها حتى إذا تم تشفير بياناتك."</string>
+    <string name="ca_certificate_warning_description" msgid="8409850109551028774">"‏المواقع الإلكترونية والتطبيقات وشبكات VPN تستخدِم شهادات CA للتشفير. لا تثبِّت شهادات CA إلا من المؤسسات التي تثق فيها. \n\nإذا ثبَّت شهادة CA، يمكن لمالك الشهادة الوصول إلى بياناتك، مثلاً كلمات المرور أو تفاصيل بطاقة الائتمان من المواقع الإلكترونية التي تزورها أو التطبيقات التي تستخدمها حتى إذا تم تشفير بياناتك."</string>
     <string name="certificate_warning_dont_install" msgid="3794366420884560605">"عدم التثبيت"</string>
     <string name="certificate_warning_install_anyway" msgid="4633118283407228740">"التثبيت على أي حال"</string>
     <string name="cert_not_installed" msgid="6725137773549974522">"لم يتم تثبيت الشهادة."</string>
@@ -2831,47 +2831,47 @@
     <string name="vpn_not_used" msgid="7229312881336083354">"(غير مستخدم)"</string>
     <string name="vpn_no_ca_cert" msgid="3687379414088677735">"(عدم التحقق من ملكية الخادم)"</string>
     <string name="vpn_no_server_cert" msgid="8106540968643125407">"(الواردة من الخادم)"</string>
-    <string name="vpn_always_on_invalid_reason_other" msgid="4571905303713233321">"‏المعلومات التي تم إدخالها لا تتوافق مع الشبكة الافتراضية الخاصة (VPN) التي يتم تشغيلها دائمًا."</string>
+    <string name="vpn_always_on_invalid_reason_other" msgid="4571905303713233321">"‏المعلومات التي تم إدخالها لا تتوافق مع شبكة VPN التي يتم تشغيلها دائمًا."</string>
     <string name="vpn_cancel" msgid="5929410618112404383">"إلغاء"</string>
     <string name="vpn_done" msgid="5137858784289564985">"تجاهل"</string>
     <string name="vpn_save" msgid="683868204634860888">"حفظ"</string>
     <string name="vpn_connect" msgid="7102335248484045354">"اتصال"</string>
     <string name="vpn_replace" msgid="1533147558671640341">"استبدال"</string>
-    <string name="vpn_edit" msgid="5862301148429324911">"تعديل ملف الشبكة الافتراضية الخاصة"</string>
+    <string name="vpn_edit" msgid="5862301148429324911">"‏تعديل ملف شبكة VPN"</string>
     <string name="vpn_forget" msgid="2913950864877236737">"حذف"</string>
     <string name="vpn_connect_to" msgid="216709261691085594">"الاتصال بـ <xliff:g id="PROFILE">%s</xliff:g>"</string>
-    <string name="vpn_disconnect_confirm" msgid="6356789348816854539">"‏هل تريد قطع الاتصال بهذه الشبكة الافتراضية الخاصة (VPN)؟"</string>
+    <string name="vpn_disconnect_confirm" msgid="6356789348816854539">"‏هل تريد قطع الاتصال بهذه شبكة VPN؟"</string>
     <string name="vpn_disconnect" msgid="7753808961085867345">"قطع الاتصال"</string>
     <string name="vpn_version" msgid="6344167191984400976">"الإصدار"</string>
-    <string name="vpn_forget_long" msgid="729132269203870205">"نسيان الشبكة الافتراضية الخاصة"</string>
+    <string name="vpn_forget_long" msgid="729132269203870205">"‏نسيان شبكة VPN"</string>
     <string name="vpn_replace_vpn_title" msgid="3994226561866340280">"‏هل تريد استبدال شبكة VPN الحالية؟"</string>
-    <string name="vpn_set_vpn_title" msgid="1667539483005810682">"هل تريد تشغيل الشبكة الافتراضية الخاصة باستمرار؟"</string>
+    <string name="vpn_set_vpn_title" msgid="1667539483005810682">"‏هل تريد تشغيل شبكة VPN باستمرار؟"</string>
     <string name="vpn_first_always_on_vpn_message" msgid="2769478310633047870">"‏عند تفعيل هذا الإعداد، لن تتمكن من الاتصال بالإنترنت إلا بعد أن ينجح اتصال شبكة VPN"</string>
-    <string name="vpn_replace_always_on_vpn_enable_message" msgid="9154843462740876652">"‏سيتم استبدال شبكتك الافتراضية الخاصة (VPN) الحالية ولن تتمكن من الاتصال بالإنترنت إلا بعد أن ينجح اتصال الشبكة الافتراضية الخاصة (VPN)"</string>
+    <string name="vpn_replace_always_on_vpn_enable_message" msgid="9154843462740876652">"‏سيتم استبدال شبكة VPN الحالية ولن تتمكن من الاتصال بالإنترنت إلا بعد أن ينجح اتصال شبكة VPN"</string>
     <string name="vpn_replace_always_on_vpn_disable_message" msgid="4299175336198481106">"‏أنت متصل حاليًا بشبكة VPN مضبوطة على وضع التشغيل الدائم. وإذا اتصلت بشبكة VPN أخرى، فسيتم استبدال شبكة VPN الحالية، كما سيتم إيقاف وضع التشغيل الدائم."</string>
-    <string name="vpn_replace_vpn_message" msgid="1094297700371463386">"‏أنت متصل حاليًا بشبكة افتراضية خاصة (VPN). وإذا اتصلت بشبكة افتراضية خاصة أخرى، فسيتم استبدال شبكتك الافتراضية الخاصة الحالية."</string>
+    <string name="vpn_replace_vpn_message" msgid="1094297700371463386">"‏أنت متصل حاليًا بشبكة VPN. وإذا اتصلت بشبكة VPN أخرى، فسيتم استبدال شبكة VPN الحالية."</string>
     <string name="vpn_turn_on" msgid="3568307071295211187">"تفعيل"</string>
     <string name="vpn_cant_connect_title" msgid="5670787575925519386">"يتعذر الاتصال بـ <xliff:g id="VPN_NAME">%1$s</xliff:g>"</string>
-    <string name="vpn_cant_connect_message" msgid="2139148820719163694">"‏لا يتوافق هذا التطبيق مع الشبكة الافتراضية الخاصة (VPN) التي يتم تشغيلها دائمًا"</string>
-    <string name="vpn_title" msgid="3068868814145870274">"الشبكة الافتراضية الخاصة"</string>
-    <string name="vpn_create" msgid="7546073242936894638">"‏إضافة ملف شخصي لشبكة افتراضية خاصة (VPN)"</string>
+    <string name="vpn_cant_connect_message" msgid="2139148820719163694">"‏لا يتوافق هذا التطبيق مع شبكة VPN التي يتم تشغيلها دائمًا"</string>
+    <string name="vpn_title" msgid="3068868814145870274">"‏شبكة VPN"</string>
+    <string name="vpn_create" msgid="7546073242936894638">"‏إضافة ملف شخصي لشبكة VPN"</string>
     <string name="vpn_menu_edit" msgid="5100387853773792379">"تعديل الملف الشخصي"</string>
     <string name="vpn_menu_delete" msgid="4455966182219039928">"حذف الملف الشخصي"</string>
     <string name="vpn_menu_lockdown" msgid="5284041663859541007">"‏شبكة VPN قيد التشغيل دائمًا"</string>
-    <string name="vpn_no_vpns_added" msgid="7387080769821533728">"‏لم تتم إضافة أي شبكات افتراضية خاصة (VPN)"</string>
+    <string name="vpn_no_vpns_added" msgid="7387080769821533728">"‏لم تتم إضافة أي شبكات VPN"</string>
     <string name="vpn_always_on_summary" msgid="2171252372476858166">"‏متابعة الاتصال بشبكة VPN في جميع الأوقات"</string>
     <string name="vpn_always_on_summary_not_supported" msgid="9084872130449368437">"عدم التوافق مع هذا التطبيق"</string>
     <string name="vpn_always_on_summary_active" msgid="175877594406330387">"التشغيل دائمًا"</string>
     <string name="vpn_insecure_summary" msgid="4450920215186742859">"هذا التطبيق غير آمن."</string>
-    <string name="vpn_require_connection" msgid="1027347404470060998">"حظر أي اتصالات بدون شبكة افتراضية خاصة"</string>
+    <string name="vpn_require_connection" msgid="1027347404470060998">"‏حظر أي اتصالات بدون شبكة VPN"</string>
     <string name="vpn_require_connection_title" msgid="4186758487822779039">"‏أيتطلب الأمر اتصالاً بشبكة VPN؟"</string>
-    <string name="vpn_insecure_dialog_subtitle" msgid="1857621742868835300">"‏هذا التطبيق غير آمن. يُرجى التحديث إلى شبكة افتراضية خاصة (VPN) باستخدام بروتوكول IKEv2."</string>
-    <string name="vpn_start_unsupported" msgid="7139925503292269904">"‏تعذَّر تفعيل شبكة افتراضية خاصة (VPN) غير متوافقة."</string>
-    <string name="vpn_lockdown_summary" msgid="4700625960550559029">"‏حدد ملفًا شخصيًا للشبكة الافتراضية الخاصة (VPN) للاتصال الدائم بها. لن يتم السماح بحركة مرور الشبكة إلا عند الاتصال بهذه الشبكة الافتراضية الخاصة."</string>
+    <string name="vpn_insecure_dialog_subtitle" msgid="1857621742868835300">"‏هذا التطبيق غير آمن. يُرجى التحديث إلى شبكة VPN باستخدام بروتوكول IKEv2."</string>
+    <string name="vpn_start_unsupported" msgid="7139925503292269904">"‏تعذَّر تفعيل شبكة VPN غير متوافقة."</string>
+    <string name="vpn_lockdown_summary" msgid="4700625960550559029">"‏حدد ملفًا شخصيًا لشبكة VPN للاتصال الدائم بها. لن يتم السماح بحركة مرور الشبكة إلا عند الاتصال بهذه شبكة VPN."</string>
     <string name="vpn_lockdown_none" msgid="455915403560910517">"بدون"</string>
-    <string name="vpn_lockdown_config_error" msgid="1992071316416371316">"‏تتطلب الشبكة الافتراضية الخاصة (VPN) دائمة التفعيل عنوان IP لكل من الخادم ونظام أسماء النطاقات."</string>
+    <string name="vpn_lockdown_config_error" msgid="1992071316416371316">"‏تتطلب شبكة VPN دائمة التفعيل عنوان IP لكل من الخادم ونظام أسماء النطاقات."</string>
     <string name="vpn_no_network" msgid="7187593680049843763">"ليس هناك اتصال بالشبكة. يُرجى إعادة المحاولة لاحقًا."</string>
-    <string name="vpn_disconnected" msgid="7694522069957717501">"تم قطع الاتصال بالشبكة الافتراضية الخاصة"</string>
+    <string name="vpn_disconnected" msgid="7694522069957717501">"‏تم قطع الاتصال بشبكة VPN"</string>
     <string name="vpn_disconnected_summary" msgid="721699709491697712">"غير متّصل بشبكة"</string>
     <string name="vpn_missing_cert" msgid="5397309964971068272">"إحدى الشهادات مفقودة. حاول تعديل الملف الشخصي."</string>
     <string name="trusted_credentials_system_tab" msgid="675362923690364722">"النظام"</string>
@@ -4137,8 +4137,8 @@
     <string name="run_backup_tasks_switch_title" msgid="4740767959730361777">"السماح للتطبيق بتنفيذ مهام في الخلفية مرتبطة بالاحتفاظ بنسخة احتياطية"</string>
     <string name="run_backup_tasks_footer_title" msgid="1766222193265152388">"يشير مفتاح التبديل هذا إلى أن لهذا التطبيق حالة استخدام رئيسية تتطلّب الاحتفاظ بنسخة احتياطية من المحتوى أو مزامنته. يسمح منح هذا الإذن للتطبيق بالتشغيل في الخلفية لمدة أطول بعض الشيء لإكمال المهمة المرتبطة بالاحتفاظ بنسخة احتياطية. \n\nإذا لم يتم منح هذا الإذن، لن يمنح النظام أي إعفاء خاص لهذا التطبيق يتيح له إكمال هذه المهمة في الخلفية."</string>
     <string name="keywords_run_backup_tasks" msgid="632219905465766211">"مهام الاحتفاظ بنسخة احتياطية، وظائف الاحتفاظ بنسخة احتياطية"</string>
-    <string name="reset_shortcut_manager_throttling" msgid="2183940254903144298">"‏إعادة ضبط تقييد المعدّل في ShortcutManager"</string>
-    <string name="reset_shortcut_manager_throttling_complete" msgid="8949943009096885470">"‏تمت إعادة ضبط تقييد المعدّل في ShortcutManager."</string>
+    <string name="reset_shortcut_manager_throttling" msgid="2183940254903144298">"‏إعادة ضبط الحد الأقصى لتحديث الاختصارات في ShortcutManager"</string>
+    <string name="reset_shortcut_manager_throttling_complete" msgid="8949943009096885470">"‏تمت إعادة ضبط الحد الأقصى لتحديث الاختصارات في ShortcutManager."</string>
     <string name="notification_suggestion_title" msgid="6309263655965785411">"التحكم في المعلومات على شاشة القفل"</string>
     <string name="notification_suggestion_summary" msgid="7615611244249276113">"إظهار محتوى الإشعار أو إخفاؤه"</string>
     <string name="page_tab_title_support" msgid="3235725053332345773">"النصائح والدعم"</string>
@@ -4274,9 +4274,9 @@
     <string name="enterprise_privacy_number_packages" msgid="5294444005035188274">"{count,plural, =1{تطبيق واحد}zero{# تطبيق}two{تطبيقان}few{# تطبيقات}many{# تطبيقًا}other{# تطبيق}}"</string>
     <string name="enterprise_privacy_input_method" msgid="3278314982700662246">"لوحة المفاتيح التلقائية"</string>
     <string name="enterprise_privacy_input_method_name" msgid="2974859490559054584">"ضبط على <xliff:g id="APP_LABEL">%s</xliff:g>"</string>
-    <string name="enterprise_privacy_always_on_vpn_device" msgid="1735829327405126695">"‏تم تفعيل إعداد \"شبكة افتراضية خاصة (VPN) دائمة التفعيل\""</string>
-    <string name="enterprise_privacy_always_on_vpn_personal" msgid="8395903360175064841">"‏تم تفعيل إعداد \"شبكة افتراضية خاصة (VPN) دائمة التفعيل\" في الملف الشخصي"</string>
-    <string name="enterprise_privacy_always_on_vpn_work" msgid="2496961514592522377">"‏تم تفعيل \"شبكة افتراضية خاصة (VPN) دائمة التفعيل\" في ملف العمل"</string>
+    <string name="enterprise_privacy_always_on_vpn_device" msgid="1735829327405126695">"‏تم تفعيل إعداد \"شبكة VPN دائمة التفعيل\""</string>
+    <string name="enterprise_privacy_always_on_vpn_personal" msgid="8395903360175064841">"‏تم تفعيل إعداد \"شبكة VPN دائمة التفعيل\" في الملف الشخصي"</string>
+    <string name="enterprise_privacy_always_on_vpn_work" msgid="2496961514592522377">"‏تم تفعيل \"شبكة VPN دائمة التفعيل\" في ملف العمل"</string>
     <string name="enterprise_privacy_global_http_proxy" msgid="4350347418068037051">"‏تم ضبط الخادم الوكيل HTTP العام"</string>
     <string name="enterprise_privacy_ca_certs_device" msgid="1816495877258727663">"بيانات الاعتماد الموثوقة"</string>
     <string name="enterprise_privacy_ca_certs_personal" msgid="1516422660828485795">"بيانات اعتماد موثوقة في ملفك الشخصي"</string>
@@ -4683,8 +4683,8 @@
     <string name="settings_panel_title" msgid="346363079938069215">"لوحة الإعدادات"</string>
     <string name="force_desktop_mode" msgid="1336913605091334238">"فرض وضع سطح المكتب"</string>
     <string name="force_desktop_mode_summary" msgid="4587416867846930479">"فرض وضع سطح المكتب التجريبي على شاشات العرض الثانوية"</string>
-    <string name="enable_non_resizable_multi_window" msgid="6832903754625404477">"استخدام التطبيقات التي لا يتغير حجمها في النوافذ المتعددة"</string>
-    <string name="enable_non_resizable_multi_window_summary" msgid="3275763753261901999">"السماح باستخدام التطبيقات التي لا يتغير حجمها في النوافذ المتعددة"</string>
+    <string name="enable_non_resizable_multi_window" msgid="6832903754625404477">"عرض التطبيقات التي لا يتغيّر حجمها على شاشة متعدّدة النوافذ"</string>
+    <string name="enable_non_resizable_multi_window_summary" msgid="3275763753261901999">"السماح بعرض التطبيقات التي لا يتغيّر حجمها على شاشة متعدّدة النوافذ"</string>
     <string name="hwui_force_dark_title" msgid="4256904905631994219">"إلغاء ميزة فرض تعتيم الشاشة"</string>
     <string name="hwui_force_dark_summary" msgid="6515748781487952769">"لإلغاء ميزة فرض تعتيم الشاشة بحيث يتم تفعيلها دائمًا"</string>
     <string name="privacy_dashboard_title" msgid="6845403825611829558">"الخصوصية"</string>
@@ -5015,7 +5015,7 @@
     <string name="disable_phantom_process_monitor_title" msgid="8348108346706188771">"إيقاف القيود المفروضة على العمليات الثانوية"</string>
     <string name="disable_phantom_process_monitor_summary" msgid="3044464635550256985">"إيقاف القيود المفروضة على استخدام موارد النظام لعمليات التطبيق الثانوية"</string>
     <string name="enable_notes_role_title" msgid="7662702013496114763">"فرض تفعيل دور \"الملاحظات\""</string>
-    <string name="enable_notes_role_summary" msgid="5495721409392395089">"‏يؤدي هذا الإجراء إلى إتاحة عمليات دمج نظام تدوين الملاحظات من خلال الدور Notes (تدوين الملاحظات). إذا كان قد سبق وتم تفعيل الدور Notes (تدوين الملاحظات)، لن يكون لهذا الإجراء أي تأثير. يتطلّب تنفيذ هذا الإجراء إعادة التشغيل."</string>
+    <string name="enable_notes_role_summary" msgid="5495721409392395089">"‏يتيح هذا الخيار دمج نظام تدوين الملاحظات من خلال دور \"الملاحظات\" (Notes). إذا سبق وفعّلت هذا الدور، لن يكون لهذا الخيار أي تأثير. يجب إعادة تشغيل الجهاز."</string>
     <string name="bluetooth_broadcast_dialog_title" msgid="9172775308463135884">"البث"</string>
     <string name="bluetooth_broadcast_dialog_broadcast_app" msgid="1016617579194329005">"بث تطبيق <xliff:g id="CURRENTAPP">%1$s</xliff:g>"</string>
     <string name="bluetooth_broadcast_dialog_find_message" msgid="6621660851669953883">"يمكنك الاستماع إلى محتوى يتم بثّه بالقرب منك."</string>
