--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -357,7 +357,7 @@
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"আঙ্গুলের ছাপ"</string>
     <string name="security_settings_fingerprint_settings_preferences_category" msgid="8975029409126780752">"ফিঙ্গারপ্রিন্ট আনলক ব্যবহার করার সময়"</string>
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"কাজের জন্য ফিঙ্গারপ্রিন্ট"</string>
-    <string name="fingerprint_add_title" msgid="1837610443487902050">"আঙুলের ছাপ যোগ করুন"</string>
+    <string name="fingerprint_add_title" msgid="1837610443487902050">"ফিঙ্গারপ্রিন্ট যোগ করুন"</string>
     <string name="security_settings_fingerprint_preference_summary" msgid="8486134175759676037">"{count,plural, =1{ফিঙ্গারপ্রিন্ট যোগ করা হয়েছে}one{#টি ফিঙ্গারপ্রিন্ট যোগ করা হয়েছে}other{#টি ফিঙ্গারপ্রিন্ট যোগ করা হয়েছে}}"</string>
     <string name="security_settings_fingerprint_preference_summary_none" msgid="1146977379031250790">"সেট-আপ করতে হবে"</string>
     <string name="security_settings_fingerprint_enroll_introduction_title" msgid="7931650601996313070">"\'ফিঙ্গারপ্রিন্ট\' সেট আপ করুন"</string>
@@ -381,8 +381,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"সবচেয়ে ভাল ফলাফল পেতে, Google-এর জন্য তৈরি হিসেবে সার্টিফিকেট প্রাপ্ত একটি স্ক্রিন প্রোটেকটর ব্যবহার করুন। অন্যান্য স্ক্রিন প্রোটেকটর ব্যবহার করলে, আপনার ফিঙ্গারপ্রিন্ট কাজ নাও করতে পারে।"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"সবচেয়ে ভাল ফলাফল পেতে, Google-এর জন্য তৈরি হিসেবে সার্টিফিকেট প্রাপ্ত একটি স্ক্রিন প্রোটেকটর ব্যবহার করুন। অন্য কোনও স্ক্রিন প্রোটেকটর ব্যবহার করলে, আপনার সন্তানের আঙ্গুলের ছাপ কাজ নাও করতে পারে।"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
-    <string name="security_settings_activeunlock_preference_title" msgid="4257580421087062228">"ঘড়ি আনলক করা"</string>
-    <string name="biometric_settings_intro_with_activeunlock" msgid="5032953826653108646">"আপনি \'ফেস আনলক\' ও \'ফিঙ্গারপ্রিন্ট আনলক\' ফিচার, সেট-আপ করার সময় মাস্ক পরলে বা অন্ধকার জায়গায় থাকলে আপনার ফোন ফিঙ্গারপ্রিন্ট চাইবে।\n\nআপনার ফোন আনলক করার আরেকটি সুবিধাজনক উপায় হল \'ঘড়ি আনলক করা\' ফিচার, যেমন, যখন আপনার আঙুল ভিজে থাকে বা মুখ শনাক্ত করা যায় না।"</string>
+    <string name="security_settings_activeunlock_preference_title" msgid="4257580421087062228">"ওয়াচ আনলক"</string>
+    <string name="biometric_settings_intro_with_activeunlock" msgid="5032953826653108646">"\'ফেস আনলক\' ও \'ফিঙ্গারপ্রিন্ট আনলক\' ফিচার সেট-আপ করলে, আপনি মাস্ক পরে বা অন্ধকার জায়গায় থাকলে পরিচয় যাচাই করার জন্য ফোন আপনার ফিঙ্গারপ্রিন্ট চাইবে।\n\nআপনার আঙুল ভিজে থাকলে বা মুখ শনাক্ত করা না গেলে, আপনার ফোন আনলক করার আরেকটি সুবিধাজনক উপায় হল \'ওয়াচ আনলক\' ফিচার।"</string>
     <string name="biometric_settings_intro_with_fingerprint" msgid="5881355884547769337">"আপনার ফোন আনলক করার আরেকটি সুবিধাজনক উপায় হল \'ঘড়ি আনলক করা\' ফিচার, যেমন, যখন আপনার ফিঙ্গারপ্রিন্ট শনাক্ত করা যায় না।"</string>
     <string name="biometric_settings_intro_with_face" msgid="7671919122230588521">"আপনার ফোন আনলক করার আরেকটি সুবিধাজনক উপায় হল \'ঘড়ি আনলক করা\' ফিচার, যেমন, যখন আপনার মুখ শনাক্ত করা যায় না।"</string>
     <string name="biometric_settings_use_fingerprint_or_watch_for" msgid="1160830065613858095">"এগুলি করতে ফিঙ্গারপ্রিন্ট বা ওয়াচ ব্যবহার করুন"</string>
@@ -444,7 +444,7 @@
     <string name="biometric_settings_use_biometric_for_apps" msgid="6201168728906364189">"অ্যাপে আপনার পরিচয় যাচাই করুন"</string>
     <string name="biometric_settings_use_face_preference_summary" msgid="1821648836899408477">"মুখ ব্যবহার করে"</string>
     <string name="biometric_settings_use_fingerprint_preference_summary" msgid="6077762097826050165">"আঙুলের ছাপ ব্যবহার করে"</string>
-    <string name="biometric_settings_use_face_or_fingerprint_preference_summary" msgid="3029102492674234728">"মুখ বা ফিঙ্গারপ্রিন্ট ব্যবহার করে"</string>
+    <string name="biometric_settings_use_face_or_fingerprint_preference_summary" msgid="3029102492674234728">"ফেস বা ফিঙ্গারপ্রিন্ট ব্যবহার করে"</string>
     <string name="biometric_settings_hand_back_to_guardian_ok" msgid="1763788801883247426">"ঠিক আছে"</string>
     <string name="biometric_settings_add_face_in_split_mode_title" msgid="6041232223862753222">"ফেস আনলক করার সুবিধা সেট-আপ করতে পারছেন না"</string>
     <string name="biometric_settings_add_face_in_split_mode_message" msgid="1904738532939614456">"\'ফেস আনলক\' সেট-আপ করতে, \'স্প্লিট স্ক্রিন\' থেকে বেরিয়ে যান"</string>
@@ -1874,7 +1874,7 @@
     <string name="show_ime_summary" msgid="7293345791727205975">"ফিজিক্যাল কীবোর্ড সক্রিয় থাকার সময় এটিকে স্ক্রীনে রাখুন"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"বাউন্স \'কী\'"</string>
     <string name="bounce_keys_summary" msgid="7347050868868080302">"<xliff:g id="BOUNCE_KEYS_THRESHOLD">%1$d</xliff:g> মিলি সেকেন্ডের মধ্যে একই কী বারবার প্রেস করলে তা কীবোর্ড উপেক্ষা করে"</string>
-    <string name="slow_keys" msgid="2891452895499690837">"স্লো কী"</string>
+    <string name="slow_keys" msgid="2891452895499690837">"স্লো \'কী\'"</string>
     <string name="slow_keys_summary" msgid="1784371292745423292">"কোনও কী প্রেস করলে সেটি অ্যাক্টিভেট হতে যে সময় লাগে তা <xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> মিলি সেকেন্ডে অ্যাডজাস্ট হয়"</string>
     <string name="sticky_keys" msgid="7317317044898161747">"স্টিকি \'কী\'"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"শর্টকাটের জন্য কীগুলি একসাথে ধরে রাখার পরিবর্তে একবারে একটি কী প্রেস করুন"</string>
@@ -1921,7 +1921,7 @@
     <string name="trackpad_notifications_summary" msgid="7663647367648690040">"তিনটি আঙুলের সাহায্যে নিচের দিকে সোয়াইপ করুন"</string>
     <string name="trackpad_switch_apps_title" msgid="7342032935377284039">"অ্যাপ পরিবর্তন করা"</string>
     <string name="trackpad_switch_apps_summary" msgid="9193942041912927440">"চারটি আঙুলের সাহায্যে ডান বা বাঁদিকে সোয়াইপ করুন"</string>
-    <string name="modifier_keys_settings" msgid="2537108435032034683">"মডিফায়ার কী"</string>
+    <string name="modifier_keys_settings" msgid="2537108435032034683">"মডিফায়ার \'কী\'"</string>
     <string name="modifier_keys_settings_summary" msgid="6933143361657444436">"\'কী\'-এর সেটিংস পরিবর্তন করুন"</string>
     <string name="modifier_keys_reset_title" msgid="948294258402761066">"সবকটি রিসেট করুন"</string>
     <string name="modifier_keys_default_summary" msgid="8701640508670973258">"ডিফল্ট"</string>
@@ -2071,10 +2071,10 @@
     <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"সপ্তাহান্তে কোনও প্ল্যান আছে?"</string>
     <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"বিচে ঘুরতে যাচ্ছি। যোগ দিতে চান?"</string>
     <string name="accessibility_screen_option" msgid="8465307075278878145">"বিকল্প"</string>
-    <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"স্ক্রিনে জুম বাড়ান"</string>
+    <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"স্ক্রিনে জুম-ইন করুন"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"জুম করতে ৩ বার ট্যাপ করুন"</string>
     <string name="accessibility_screen_magnification_navbar_short_summary" msgid="4885018322430052037">"জুম করার জন্য বোতামে ট্যাপ করুন"</string>
-    <string name="accessibility_screen_magnification_intro_text" msgid="3856180549393526339">"কন্টেন্ট আরও বড় সাইজে দেখার জন্য, স্ক্রিনে দ্রুত জুম বাড়ান"</string>
+    <string name="accessibility_screen_magnification_intro_text" msgid="3856180549393526339">"কন্টেন্ট আরও বড় সাইজে দেখার জন্য, স্ক্রিনে দ্রুত জুম-ইন করুন"</string>
     <string name="accessibility_screen_magnification_summary" msgid="8267672508057326959">"&lt;b&gt;জুম ইন করতে:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. \'বড় করে দেখা\' ফিচার চালু করার জন্য শর্টকাট ব্যবহার করুন&lt;br/&gt; {1,number,integer}। স্ক্রিনে ট্যাপ করুন&lt;br/&gt; {2,number,integer}। স্ক্রিনের চারদিকে ঘোরাতে ২টি আঙুল দিয়ে টেনে আনুন&lt;br/&gt; {3,number,integer}। জুম অ্যাডজাস্ট করার জন্য ২টি আঙুল দিয়ে পিঞ্চ করুন&lt;br/&gt; {4,number,integer}। \'বড় করে দেখা\' ফিচার বন্ধ করার জন্য শর্টকাট ব্যবহার করুন&lt;br/&gt;&lt;br/&gt; &lt;b&gt;সাময়িকভাবে জুম ইন করতে:&lt;/b&gt;&lt;br/&gt; {0,number,integer}। আপনার \'বড় করে দেখা\' ফিচারের ধরন ফুল স্ক্রিনে সেট হয়েছে কিনা ভাল করে দেখে নিন&lt;br/&gt; {1,number,integer}। \'বড় করে দেখা\' ফিচার চালু করতে শর্টকাট ব্যবহার করুন&lt;br/&gt; {2,number,integer}। স্ক্রিনের যেকোনও জায়গা টাচ করে ধরে থাকুন&lt;br/&gt; {3,number,integer}। স্ক্রিনের চারদিকে ঘোরাতে আঙুল দিয়ে টেনে আনুন&lt;br/&gt; {4,number,integer}। \'বড় করে দেখা\' ফিচার বন্ধ করতে স্ক্রিনের উপর থেকে আঙুল সরিয়ে নিন"</string>
     <string name="accessibility_screen_magnification_navbar_summary" msgid="807985499898802296">"ম্যাগনিফিকেশন চালু করা থাকলে, আপনি স্ক্রিনে জুম বাড়াতে পারবেন।\n\n"<b>"জুম করতে"</b>", ম্যাগনিফিকেশন চালু করে স্ক্রিনের যেকোনও জায়গায় ট্যাপ করুন।\n"<ul><li>"• স্ক্রল করতে ২ বা তার বেশি আঙ্গুল দিয়ে টানুন"</li>\n<li>"• জুম অ্যাডজাস্ট করতে ২ বা তার বেশি আঙ্গুল দিয়ে পিঞ্চ করুন"</li></ul>\n\n<b>"সাময়িকভাবে জুম করতে"</b>", ম্যাগনিফিকেশন চালু করে স্ক্রিনের যেকোনও জায়গায় টাচ করে ধরে থাকুন।\n"<ul><li>"• টেনে স্ক্রিনের বিভিন্ন জায়গায় সরান"</li>\n<li>"• জুম কমাতে স্ক্রিন থেকে আঙ্গুল তুলে নিন"</li></ul>\n\n"কীবোর্ড বা নেভিগেশন বারে আপনি জুম করতে পারবেন না।"</string>
     <string name="accessibility_tutorial_pager" msgid="8461939455728454061">"<xliff:g id="NUM_PAGES">%2$d</xliff:g>টি মধ্যে <xliff:g id="CURRENT_PAGE">%1$d</xliff:g> নম্বর পৃষ্ঠা"</string>
@@ -3064,7 +3064,7 @@
     <string name="sim_signal_strength" msgid="6351052821700294501">"<xliff:g id="DBM">%1$d</xliff:g> dBm <xliff:g id="ASU">%2$d</xliff:g> asu"</string>
     <string name="sim_notification_title" msgid="6839556577405929262">"আপনার সিম কার্ড পরিবর্তন করা হয়েছে"</string>
     <string name="sim_notification_summary" msgid="5593339846307029991">"সেট-আপ করার জন্য আলতো চাপুন"</string>
-    <string name="sim_calls_ask_first_prefs_title" msgid="3077694594349657933">"প্রতিবার জিজ্ঞাসা করুন"</string>
+    <string name="sim_calls_ask_first_prefs_title" msgid="3077694594349657933">"প্রতিবার জিজ্ঞাসা করা হবে"</string>
     <string name="sim_selection_required_pref" msgid="231437651041498359">"নির্বাচন করার প্রয়োজন"</string>
     <string name="sim_selection_channel_title" msgid="3193666315607572484">"সিম বেছে নেওয়া"</string>
     <string name="dashboard_title" msgid="5660733037244683387">"সেটিংস"</string>
