--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -441,7 +441,7 @@
     <string name="biometric_settings_category_ways_to_unlock" msgid="3384767901580915266">"Načini otključavanja"</string>
     <string name="biometric_settings_category_use_face_fingerprint" msgid="4377659744376863913">"Upotrijebite lice ili otisak prsta za"</string>
     <string name="biometric_settings_use_biometric_unlock_phone" msgid="8180914579885804358">"Otključavanje telefona"</string>
-    <string name="biometric_settings_use_biometric_for_apps" msgid="6201168728906364189">"Potvrđivanje identiteta u aplikacijama"</string>
+    <string name="biometric_settings_use_biometric_for_apps" msgid="6201168728906364189">"Potvrdite svoj identitet u aplikacijama"</string>
     <string name="biometric_settings_use_face_preference_summary" msgid="1821648836899408477">"Pomoću lica"</string>
     <string name="biometric_settings_use_fingerprint_preference_summary" msgid="6077762097826050165">"Pomoću otiska prsta"</string>
     <string name="biometric_settings_use_face_or_fingerprint_preference_summary" msgid="3029102492674234728">"Pomoću lica ili otiska prsta"</string>
@@ -642,7 +642,7 @@
     <string name="suggested_lock_settings_title" msgid="7836065447159730217">"Zaštitite telefon"</string>
     <string name="suggested_fingerprint_lock_settings_title" msgid="3140266181874137984">"Dodajte otisak prsta za otključavanje"</string>
     <string name="lock_settings_picker_title" msgid="9219376327364915334">"Zaključavanje zaslona"</string>
-    <string name="lock_settings_picker_new_lock_title" msgid="3113042086804290919">"Odaberite zaključavanje zaslona"</string>
+    <string name="lock_settings_picker_new_lock_title" msgid="3113042086804290919">"Odaberite način zaključavanja zaslona"</string>
     <string name="lock_settings_picker_update_lock_title" msgid="536853138943415927">"Odaberite novo zaključavanje zaslona"</string>
     <string name="lock_settings_picker_new_profile_lock_title" msgid="2270462215256413800">"Zaključavanje za poslovne aplikacije"</string>
     <string name="lock_settings_picker_update_profile_lock_title" msgid="5929068163516308927">"Odaberite novo zaključavanje poslovnog profila"</string>
@@ -748,7 +748,7 @@
     <string name="unlock_footer_high_complexity_requested" msgid="4471274783909915352">"<xliff:g id="APP_NAME">%1$s</xliff:g> preporučuje snažniji PIN ili zaporku i bez toga možda neće pravilno funkcionirati"</string>
     <string name="unlock_footer_medium_complexity_requested" msgid="5515870066751600640">"<xliff:g id="APP_NAME">%1$s</xliff:g> preporučuje novi PIN ili zaporku i bez toga možda neće pravilno funkcionirati"</string>
     <string name="unlock_footer_low_complexity_requested" msgid="2517656037576567971">"<xliff:g id="APP_NAME">%1$s</xliff:g> preporučuje novi uzorak, PIN ili zaporku i bez toga možda neće pravilno funkcionirati"</string>
-    <string name="unlock_footer_none_complexity_requested" msgid="8534900170428140529">"<xliff:g id="APP_NAME">%1$s</xliff:g> preporučuje novo zaključavanje zaslona"</string>
+    <string name="unlock_footer_none_complexity_requested" msgid="8534900170428140529">"<xliff:g id="APP_NAME">%1$s</xliff:g> preporučuje odabir novog načina zaključavanja zaslona"</string>
     <string name="lock_failed_attempts_before_wipe" msgid="6874652886647631418">"Pokušajte ponovo. <xliff:g id="CURRENT_ATTEMPTS">%1$d</xliff:g>. pokušaj od <xliff:g id="TOTAL_ATTEMPTS">%2$d</xliff:g>."</string>
     <string name="lock_last_attempt_before_wipe_warning_title" msgid="7450322567217745999">"Vaši će se podaci izbrisati"</string>
     <string name="lock_last_pattern_attempt_before_wipe_device" msgid="5816668400104558952">"Ako pri sljedećem pokušaju unesete netočan uzorak, izbrisat će se podaci s ovog uređaja"</string>
@@ -984,7 +984,7 @@
     <string name="wifi_dpp_sharing_wifi_with_this_device" msgid="7250369936882080107">"Dijeljenje Wi-Fija s ovim uređajem…"</string>
     <string name="wifi_dpp_connecting" msgid="2312769193202897589">"Povezivanje…"</string>
     <string name="wifi_dpp_share_hotspot" msgid="6186452780604755316">"Dijelite žarišnu točku"</string>
-    <string name="wifi_dpp_lockscreen_title" msgid="5246641326066972419">"Potvrdite da ste to vi"</string>
+    <string name="wifi_dpp_lockscreen_title" msgid="5246641326066972419">"Potvrdite identitet"</string>
     <string name="wifi_dpp_wifi_password" msgid="4992986319806934381">"Zaporka Wi-Fi mreže: <xliff:g id="PASSWORD">%1$s</xliff:g>"</string>
     <string name="wifi_dpp_hotspot_password" msgid="688464342650820420">"Zaporka žarišne točke: <xliff:g id="PASSWORD">%1$s</xliff:g>"</string>
     <string name="wifi_auto_connect_title" msgid="1890342051674657892">"Automatsko povezivanje"</string>
@@ -1640,7 +1640,7 @@
     <string name="lockpassword_confirm_your_pattern_header_frp" msgid="5641858015891896427">"Potvrdite uzorak"</string>
     <string name="lockpassword_confirm_your_pin_header_frp" msgid="8285647793164729982">"Potvrdite PIN"</string>
     <string name="lockpassword_confirm_your_password_header_frp" msgid="7932240547542564033">"Potvrdite zaporku"</string>
-    <string name="lockpassword_remote_validation_header" msgid="4992647285784962073">"Potvrđivanje identiteta"</string>
+    <string name="lockpassword_remote_validation_header" msgid="4992647285784962073">"Potvrdite svoj identitet"</string>
     <string name="lockpassword_remote_validation_pattern_details" msgid="4655537780358707983">"Da biste prenijeli Google račune, postavke i drugo, unesite uzorak drugog uređaja. Uzorak šifriran."</string>
     <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Da biste prenijeli Google račune, postavke i drugo, unesite PIN drugog uređaja. PIN je šifriran."</string>
     <string name="lockpassword_remote_validation_password_details" msgid="3482328925925888340">"Da biste prenijeli Google račune, postavke i drugo, unesite zaporku drugog uređaja. Zaporka šifrirana."</string>
@@ -2022,7 +2022,7 @@
     <string name="bt_hci_snoop_log_filter_summary" msgid="7217091930762522599">"Postavite način filtriranja. (Onemogućite i omogućite Bluetooth da bi promjene stupile na snagu)"</string>
     <string name="bt_hci_snoop_log_filtered_mode_disabled_summary" msgid="8824952559433361848">"Da biste promijenili tu opciju, postavite način rada Bluetooth HCI snoop log na Omogućeno filtrirano"</string>
     <string name="talkback_title" msgid="8756080454514251327">"TalkBack"</string>
-    <string name="talkback_summary" msgid="5820927220378864281">"Čitač zaslona namijenjen prvenstveno slijepim i slabovidnim osobama"</string>
+    <string name="talkback_summary" msgid="5820927220378864281">"Čitač zaslona koji je prvenstveno namijenjen slijepim i slabovidnim osobama"</string>
     <string name="select_to_speak_summary" msgid="1995285446766920925">"Dodirnite stavke na zaslonu za čitanje naglas"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"Postavke titlova"</string>
     <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"O preferencijama za titlove"</string>
@@ -2065,10 +2065,10 @@
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Šalje: Branko"</string>
     <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Dobro jutro!\n\nSamo želim provjeriti kako napreduju dizajni. Hoće li biti spremni prije nego što počnemo s izradom novih balona?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Poništi postavke"</string>
-    <string name="accessibility_text_reading_reset_message" msgid="824644303661026712">"Postavke veličine zaslona i teksta vraćene su na zadano"</string>
+    <string name="accessibility_text_reading_reset_message" msgid="824644303661026712">"Postavke veličine prikaza i teksta vraćene su na zadano"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Želite li poništiti veličinu prikaza i tekst?"</string>
     <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"Poništi"</string>
-    <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"Što planiraš ovaj vikend?"</string>
+    <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"Što planiraš za vikend?"</string>
     <string name="accessibility_text_reading_conversation_message_2" msgid="8112160435318635856">"Idem na plažu. Ideš sa mnom?"</string>
     <string name="accessibility_screen_option" msgid="8465307075278878145">"Opcije"</string>
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"Povećavanje zaslona"</string>
