--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -1645,7 +1645,7 @@
     <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Google アカウント、設定などを移行するには、他のデバイスの PIN を入力してください。PIN は暗号化されます。"</string>
     <string name="lockpassword_remote_validation_password_details" msgid="3482328925925888340">"Google アカウント、設定などを移行するには、他のデバイスのパスワードを入力してください。パスワードは暗号化されます。"</string>
     <string name="lockpassword_remote_validation_set_pattern_as_screenlock" msgid="7595104317648465901">"パターンでこのデバイスのロックも解除されます"</string>
-    <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"PIN でこのデバイスのロックも解除されます"</string>
+    <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"この PIN でこのデバイスもロック解除する"</string>
     <string name="lockpassword_remote_validation_set_password_as_screenlock" msgid="2066701840753591922">"パスワードでこのデバイスのロックも解除されます"</string>
     <string name="lockpassword_confirm_repair_mode_pattern_header" msgid="6669435143987988314">"パターンの確認"</string>
     <string name="lockpassword_confirm_repair_mode_pin_header" msgid="2585263648322879131">"PIN の確認"</string>
