--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -1318,7 +1318,7 @@
     <string name="module_version" msgid="1787518340082046658">"Системско ажурирање од Google Play"</string>
     <string name="battery_info" msgid="7873528123969546728">"Информации за батеријата"</string>
     <string name="device_info_not_available" msgid="4804474466616712326">"Не е достапна"</string>
-    <string name="storage_settings" msgid="7472188817781592677">"Капацитет"</string>
+    <string name="storage_settings" msgid="7472188817781592677">"Простор"</string>
     <string name="storage_settings_for_app" msgid="229425418984637483">"Капацитет и кеш"</string>
     <string name="storage_settings_title" msgid="486118156723194815">"Подесување на меморија"</string>
     <string name="status_eid" msgid="7532406028683438634">"EID"</string>
@@ -1640,12 +1640,12 @@
     <string name="lockpassword_confirm_your_pattern_header_frp" msgid="5641858015891896427">"Потврдете ја шемата"</string>
     <string name="lockpassword_confirm_your_pin_header_frp" msgid="8285647793164729982">"Потврдете го PIN-от"</string>
     <string name="lockpassword_confirm_your_password_header_frp" msgid="7932240547542564033">"Потврдете ја лозинката"</string>
-    <string name="lockpassword_remote_validation_header" msgid="4992647285784962073">"Пот. дека сте вие"</string>
+    <string name="lockpassword_remote_validation_header" msgid="4992647285784962073">"Потврдете дека сте вие"</string>
     <string name="lockpassword_remote_validation_pattern_details" msgid="4655537780358707983">"За да префрлувате сметки на Google, поставки и друго, внесете ја шемата на другиот уред. Шемата е шифрирана."</string>
     <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"За да префрлувате сметки на Google, поставки и друго, внесете го PIN-кодот на другиот уред. PIN-кодот е шифриран."</string>
     <string name="lockpassword_remote_validation_password_details" msgid="3482328925925888340">"За да префрлувате сметки на Google, поставки и друго, внесете ја лозинката на другиот уред. Лозинката е шифрирана."</string>
     <string name="lockpassword_remote_validation_set_pattern_as_screenlock" msgid="7595104317648465901">"Користи ја шемата и за отклуч. на уредов"</string>
-    <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"Користи го PIN-кодот и за отклуч. на уредов"</string>
+    <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"Користи го PIN-кодов и за отклучување на уредов"</string>
     <string name="lockpassword_remote_validation_set_password_as_screenlock" msgid="2066701840753591922">"Користи ја лозинката и за отклуч. на уредов"</string>
     <string name="lockpassword_confirm_repair_mode_pattern_header" msgid="6669435143987988314">"Потврдете ја шемата"</string>
     <string name="lockpassword_confirm_repair_mode_pin_header" msgid="2585263648322879131">"Потврдете го PIN-кодот"</string>
@@ -1708,7 +1708,7 @@
     <string name="advanced_settings" msgid="2368905204839169094">"Напредни поставки"</string>
     <string name="advanced_settings_summary" msgid="1823765348195530035">"Овозможи повеќе опции за подесување"</string>
     <string name="application_info_label" msgid="1015706497694165866">"Информации за апликацијата"</string>
-    <string name="storage_label" msgid="2522307545547515733">"Капацитет"</string>
+    <string name="storage_label" msgid="2522307545547515733">"Простор"</string>
     <string name="auto_launch_label" msgid="4069860409309364872">"Отворај стандардно"</string>
     <string name="auto_launch_label_generic" msgid="5033137408273064599">"Стандардни вредности"</string>
     <string name="screen_compatibility_label" msgid="7549658546078613431">"Компатибилност на екран"</string>
@@ -2023,7 +2023,7 @@
     <string name="bt_hci_snoop_log_filtered_mode_disabled_summary" msgid="8824952559433361848">"Поставете „Филтрирање евиденција за Bluetooth HCI\" на „Овозможено филтрирање“ за да ја промените опцијава"</string>
     <string name="talkback_title" msgid="8756080454514251327">"Talkback"</string>
     <string name="talkback_summary" msgid="5820927220378864281">"Читач на екран, првенствено за лица со слепило и слаб вид"</string>
-    <string name="select_to_speak_summary" msgid="1995285446766920925">"Допрете ставки на екранот за да ги слушнете прочитани наглас"</string>
+    <string name="select_to_speak_summary" msgid="1995285446766920925">"Допирајте ставки на екранот за да ги слушате прочитани наглас"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"Поставки за титлови"</string>
     <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"За поставките за титлови"</string>
     <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"Дознајте повеќе за поставките за титлови"</string>
@@ -4631,7 +4631,7 @@
     <string name="primary_sim_calls_title" msgid="4961189133582615685">"Повици"</string>
     <string name="primary_sim_texts_title" msgid="1287584042733097749">"Пораки"</string>
     <string name="primary_sim_automatic_data_title" msgid="1265528923229642480">"Автоматско менување мобилен интернет"</string>
-    <string name="primary_sim_automatic_data_msg" msgid="1612203837010785203">"Користете мобилен интернет од која било SIM-картичка зависно од покриеноста и достапноста"</string>
+    <string name="primary_sim_automatic_data_msg" msgid="1612203837010785203">"Користи мобилен интернет од која било SIM-картичка зависно од покриеноста и достапноста"</string>
     <string name="sim_onboarding_phoneNumber_data_only" msgid="8158409121949373662">"Само за интернет"</string>
     <string name="sim_onboarding_setup" msgid="5750393553605388463">"Поставете"</string>
     <string name="sim_onboarding_next" msgid="6415025179929475355">"Следно"</string>
