--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -1642,10 +1642,10 @@
     <string name="lockpassword_confirm_your_password_header_frp" msgid="7932240547542564033">"Sahkan kata laluan"</string>
     <string name="lockpassword_remote_validation_header" msgid="4992647285784962073">"Sahkan identiti anda"</string>
     <string name="lockpassword_remote_validation_pattern_details" msgid="4655537780358707983">"Untuk memindahkan tetapan Google Account dan pelbagai lagi, masukkan corak peranti anda yang lain. Corak anda disulitkan."</string>
-    <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Untuk memindahkan tetapan Google Account dan pelbagai lagi, masukkan PIN peranti anda yang lain. PIN anda disulitkan."</string>
+    <string name="lockpassword_remote_validation_pin_details" msgid="2373654227583206297">"Untuk memindahkan Google Account, tetapan dan pelbagai lagi, masukkan PIN peranti anda yang lain. PIN anda disulitkan."</string>
     <string name="lockpassword_remote_validation_password_details" msgid="3482328925925888340">"Untuk memindahkan tetapan Google Account dan pelbagai lagi, masukkan kata laluan peranti anda yang lain. Kata laluan anda disulitkan."</string>
     <string name="lockpassword_remote_validation_set_pattern_as_screenlock" msgid="7595104317648465901">"Gunakan juga corak untuk membuka kunci"</string>
-    <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"Gunakan juga PIN untuk membuka kunci"</string>
+    <string name="lockpassword_remote_validation_set_pin_as_screenlock" msgid="509672303005547218">"Gunakan PIN juga untuk membuka kunci peranti"</string>
     <string name="lockpassword_remote_validation_set_password_as_screenlock" msgid="2066701840753591922">"Gunakan kata laluan untuk membuka kunci"</string>
     <string name="lockpassword_confirm_repair_mode_pattern_header" msgid="6669435143987988314">"Sahkan corak"</string>
     <string name="lockpassword_confirm_repair_mode_pin_header" msgid="2585263648322879131">"Sahkan PIN"</string>
@@ -2022,8 +2022,8 @@
     <string name="bt_hci_snoop_log_filter_summary" msgid="7217091930762522599">"Tetapkan mod penapisan. (Lumpuhkan dan dayakan Bluetooth supaya perubahan dapat dilaksanakan)"</string>
     <string name="bt_hci_snoop_log_filtered_mode_disabled_summary" msgid="8824952559433361848">"Tetapkan mod log intip HCI Bluetooth kepada Didayakan Ditapis untuk menukar pilihan ini"</string>
     <string name="talkback_title" msgid="8756080454514251327">"Talkback"</string>
-    <string name="talkback_summary" msgid="5820927220378864281">"Pembaca skrin terutamanya untuk orang yang buta dan rabun"</string>
-    <string name="select_to_speak_summary" msgid="1995285446766920925">"Ketik item pada skrin anda untuk mendengar item itu dibaca"</string>
+    <string name="talkback_summary" msgid="5820927220378864281">"Pembaca skrin khusus untuk orang yang buta dan rabun"</string>
+    <string name="select_to_speak_summary" msgid="1995285446766920925">"Ketik item pada skrin untuk mendengar item itu dibaca"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"Pilihan sari kata"</string>
     <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"Perihal pilihan kapsyen"</string>
     <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"Ketahui lebih lanjut tentang pilihan sari kata"</string>
@@ -2065,7 +2065,7 @@
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Daripada: Bill"</string>
     <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Selamat pagi!\n\nBoleh saya tahu perkembangan reka bentuk itu? Adakah reka bentuk akan siap sebelum kami mula membuat belon baharu?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Tetapkan semula tetapan"</string>
-    <string name="accessibility_text_reading_reset_message" msgid="824644303661026712">"Tetapan paparan saiz dan teks telah ditetapkan semula"</string>
+    <string name="accessibility_text_reading_reset_message" msgid="824644303661026712">"Tetapan saiz paparan dan teks telah ditetapkan semula"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Tetapkan semula saiz paparan dan teks?"</string>
     <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"Tetapkan semula"</string>
     <string name="accessibility_text_reading_conversation_message_1" msgid="7883952203831957831">"Ada apa-apa rancangan hujung minggu?"</string>
