--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -16,7 +16,7 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="yes" msgid="1999566976857398962">"Yes"</string>
+    <string name="yes" msgid="1999566976857398962">"ခွင့်ပြုရန်"</string>
     <string name="no" msgid="5541738710521607130">"No"</string>
     <string name="create" msgid="986997212165228751">"ပြုလုပ်ရန်"</string>
     <string name="allow" msgid="3763244945363657722">"ခွင့်ပြုရန်"</string>
@@ -2142,7 +2142,7 @@
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"ဖောက်ထွင်းမြင်နိုင်သည်"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"ဖောက်ထွင်းမမြင်နိုင်ပါ"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"အရောင်ခြားနားချက်မြင့် စာသား"</string>
-    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"စာသားအရောင်ကို အမည်း (သို့) အဖြူ ပြောင်းနိုင်သည်။ အရောင်ခြားနားချက်ကို နောက်ခံဖြင့် အမြင့်ဆုံးပြုလုပ်နိုင်သည်။"</string>
+    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"စာသားအရောင်ကို အမည်း (သို့) အဖြူ ပြောင်းရန်။ အရောင်ခြားနားချက်ကို နောက်ခံဖြင့် အမြင့်ဆုံးပြုလုပ်ရန်။"</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_title" msgid="8737272017343509753">"စာသား ခြားနားချက်မြှင့်ရန်"</string>
     <string name="accessibility_toggle_maximize_text_contrast_preference_summary" msgid="5493999083693403489">"နောက်ခံပေါ်မူတည်၍ အလင်းအမှောင်ကို တိုးမြှင့်ပြီး စာသားအရောင်ကို အမည်း (သို့) အဖြူ ပြောင်းနိုင်သည်။"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_title" msgid="4987009529235165664">"မျက်နှာပြင်ချဲ့မှု အော်တိုအပ်ဒိတ်"</string>
@@ -4517,7 +4517,7 @@
     <string name="carrier_settings_title" msgid="6959295328730560529">"ဖုန်းကုမ္ပဏီ ဆက်တင်များ"</string>
     <string name="cdma_lte_data_service" msgid="6937443423651347345">"ဒေတာဝန်ဆောင်မှု စတင်ရန်"</string>
     <string name="mobile_data_settings_title" msgid="3927524078598009792">"မိုဘိုင်းဒေတာ"</string>
-    <string name="mobile_data_settings_summary" msgid="7323978798199919063">"မိုဘိုင်းကွန်ရက်သုံးပြီး ဒေတာသို့ ဝင်ခွင့်ပေးသည်"</string>
+    <string name="mobile_data_settings_summary" msgid="7323978798199919063">"မိုဘိုင်းကွန်ရက်ဖြင့် ဒေတာသုံးခွင့်ပေးရန်"</string>
     <string name="mobile_data_settings_summary_auto_switch" msgid="7851549787645698945">"ဖုန်းသည် ရနိုင်သည့်အကွာအဝေးအတွင်း ရောက်သည့်အခါ ဤဝန်ဆောင်မှုပေးသူသို့ အလိုအလျောက် ပြောင်းသွားပါမည်"</string>
     <string name="mobile_data_settings_summary_unavailable" msgid="9176513507571883986">"ဆင်းမ်ကတ် မရနိုင်ပါ"</string>
     <string name="calls_preference" msgid="2166481296066890129">"ခေါ်ဆိုမှု သတ်မှတ်ချက်"</string>
@@ -4631,7 +4631,7 @@
     <string name="primary_sim_calls_title" msgid="4961189133582615685">"ခေါ်ဆိုမှုများ"</string>
     <string name="primary_sim_texts_title" msgid="1287584042733097749">"စာတိုများ"</string>
     <string name="primary_sim_automatic_data_title" msgid="1265528923229642480">"အလိုအလျောက် ဒေတာပြောင်းခြင်း"</string>
-    <string name="primary_sim_automatic_data_msg" msgid="1612203837010785203">"လိုင်းဆွဲအားနှင့် ရနိုင်မှုပေါ်မူတည်၍ ဆင်းမ်ကတ်တစ်ခုခုမှ ဒေတာကို သုံးပါ"</string>
+    <string name="primary_sim_automatic_data_msg" msgid="1612203837010785203">"လိုင်းဆွဲအားနှင့် ရနိုင်မှုပေါ်မူတည်၍ ဆင်းမ်ကတ်တစ်ခုခုမှ ဒေတာကို သုံးရန်"</string>
     <string name="sim_onboarding_phoneNumber_data_only" msgid="8158409121949373662">"ဒေတာသီးသန့်"</string>
     <string name="sim_onboarding_setup" msgid="5750393553605388463">"စနစ်ထည့်သွင်းရန်"</string>
     <string name="sim_onboarding_next" msgid="6415025179929475355">"ရှေ့သို့"</string>
