--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -1869,7 +1869,7 @@
     <string name="add_virtual_keyboard" msgid="2515850206289352606">"Pamahalaan ang on-screen na keyboard"</string>
     <string name="keyboard_options_category" msgid="8040137073401152608">"Mga Opsyon"</string>
     <string name="keyboard_a11y_category" msgid="8230758278046841469">"Accessibility"</string>
-    <string name="physical_keyboard_title" msgid="3328134097512350958">"Aktwal na keyboard"</string>
+    <string name="physical_keyboard_title" msgid="3328134097512350958">"Pisikal na keyboard"</string>
     <string name="show_ime" msgid="4334255501724746849">"Gumamit ng on-screen na keyboard"</string>
     <string name="show_ime_summary" msgid="7293345791727205975">"Panatilihin ito sa screen habang aktibo ang pisikal na keyboard"</string>
     <string name="bounce_keys" msgid="7419450970351743904">"Mga bounce key"</string>
@@ -3951,7 +3951,7 @@
     <string name="screen_zoom_title" msgid="6928045302654960559">"Laki ng display"</string>
     <string name="screen_zoom_short_summary" msgid="756254364808639194">"Gawing mas malaki o mas maliit ang lahat"</string>
     <string name="screen_zoom_keywords" msgid="5964023524422386592">"density ng display, pag-zoom sa screen, scale, pag-scale"</string>
-    <string name="screen_zoom_preview_title" msgid="5288355628444562735">"I-preview"</string>
+    <string name="screen_zoom_preview_title" msgid="5288355628444562735">"Preview"</string>
     <string name="screen_zoom_make_smaller_desc" msgid="2628662648068995971">"Paliitin"</string>
     <string name="screen_zoom_make_larger_desc" msgid="7268794713428853139">"Palakihin"</string>
     <string name="disconnected" msgid="3469373726996129247">"Hindi nakakonekta"</string>
