--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -667,7 +667,7 @@
     <string name="unlock_set_unlock_pin_title" msgid="5283636759362880407">"PIN-код"</string>
     <string name="unlock_set_unlock_password_title" msgid="2559842616268607041">"Пароль"</string>
     <string name="unlock_set_do_later_title" msgid="6565575303676064364">"Не зараз"</string>
-    <string name="current_screen_lock" msgid="1367883977261098017">"Поточне блокування екрана"</string>
+    <string name="current_screen_lock" msgid="1367883977261098017">"Поточний спосіб розблокування"</string>
     <string name="fingerprint_unlock_set_unlock_pattern" msgid="2229689425933043901">"Ключ • Відбиток пальця"</string>
     <string name="fingerprint_unlock_set_unlock_pin" msgid="7979848492740627674">"PIN-код • Відбиток пальця"</string>
     <string name="fingerprint_unlock_set_unlock_password" msgid="6207676267295036963">"Пароль • Відбиток пальця"</string>
@@ -748,7 +748,7 @@
     <string name="unlock_footer_high_complexity_requested" msgid="4471274783909915352">"Щоб додаток <xliff:g id="APP_NAME">%1$s</xliff:g> правильно працював, він радить створити надійний PIN-код або пароль"</string>
     <string name="unlock_footer_medium_complexity_requested" msgid="5515870066751600640">"Щоб додаток <xliff:g id="APP_NAME">%1$s</xliff:g> правильно працював, він радить створити новий PIN-код або пароль"</string>
     <string name="unlock_footer_low_complexity_requested" msgid="2517656037576567971">"Щоб додаток <xliff:g id="APP_NAME">%1$s</xliff:g> правильно працював, він радить створити новий ключ, PIN-код або пароль"</string>
-    <string name="unlock_footer_none_complexity_requested" msgid="8534900170428140529">"Додаток <xliff:g id="APP_NAME">%1$s</xliff:g> радить вибрати новий спосіб блокування екрана"</string>
+    <string name="unlock_footer_none_complexity_requested" msgid="8534900170428140529">"Додаток <xliff:g id="APP_NAME">%1$s</xliff:g> рекомендує вибрати інший спосіб розблокування екрана"</string>
     <string name="lock_failed_attempts_before_wipe" msgid="6874652886647631418">"Спробуйте ще. Спроба <xliff:g id="CURRENT_ATTEMPTS">%1$d</xliff:g> із <xliff:g id="TOTAL_ATTEMPTS">%2$d</xliff:g>."</string>
     <string name="lock_last_attempt_before_wipe_warning_title" msgid="7450322567217745999">"Ваші дані буде видалено"</string>
     <string name="lock_last_pattern_attempt_before_wipe_device" msgid="5816668400104558952">"Якщо наступного разу ви введете неправильний ключ, дані на цьому пристрої буде видалено"</string>
@@ -5013,7 +5013,7 @@
     <string name="disable_phantom_process_monitor_title" msgid="8348108346706188771">"Вимкнути обмеження для дочірніх процесів"</string>
     <string name="disable_phantom_process_monitor_summary" msgid="3044464635550256985">"Вимкнути обмеження на використання системних ресурсів дочірніми процесами додатка"</string>
     <string name="enable_notes_role_title" msgid="7662702013496114763">"Примусово ввімкнути набір функцій \"Нотатки\""</string>
-    <string name="enable_notes_role_summary" msgid="5495721409392395089">"Увімкніть системні інтеграції для створення нотаток за допомогою набору функцій \"Нотатки\". Якщо набір функцій \"Нотатки\" вже ввімкнено, нічого не відбудеться. Потрібен перезапуск."</string>
+    <string name="enable_notes_role_summary" msgid="5495721409392395089">"Увімкнути системні інтеграції для створення нотаток за допомогою набору функцій \"Нотатки\". Якщо набір функцій \"Нотатки\" вже ввімкнено, нічого не відбудеться. Потрібен перезапуск."</string>
     <string name="bluetooth_broadcast_dialog_title" msgid="9172775308463135884">"Трансляція"</string>
     <string name="bluetooth_broadcast_dialog_broadcast_app" msgid="1016617579194329005">"Змінити додаток для трансляції на <xliff:g id="CURRENTAPP">%1$s</xliff:g>"</string>
     <string name="bluetooth_broadcast_dialog_find_message" msgid="6621660851669953883">"Слухайте трансляції з пристроїв поблизу"</string>
