--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -2063,7 +2063,7 @@
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"Thay đổi cách hiển thị văn bản"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"Tiêu đề: Mẫu thiết kế khinh khí cầu"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"Người gửi: Tùng"</string>
-    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Xin chào!\n\nTôi chỉ muốn hỏi về tiến độ thiết kế. Liệu những thiết kế đó có kịp hoàn thiện trước khi chúng tôi bắt đầu tạo hộp chú giải mới không?"</string>
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Xin chào!\n\nTôi chỉ muốn hỏi về tiến độ thiết kế. Liệu những thiết kế đó có kịp hoàn thiện trước khi chúng tôi bắt đầu tạo khinh khí cầu mới không?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Đặt lại chế độ cài đặt"</string>
     <string name="accessibility_text_reading_reset_message" msgid="824644303661026712">"Cài đặt kích thước hiển thị và văn bản đã được đặt lại"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Đặt lại văn bản và kích thước hiển thị?"</string>
